--- a/glossary.po
+++ b/glossary.po
@@ -9,6 +9,7 @@
 # And Past <andrepgs@gmail.com>, 2017
 # Claudio Rogerio Carvalho Filho, 2017
 # Welington Carlos <wcarlos3@gmail.com>, 2018
+# felipe caridade <caridade500@gmail.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -17,7 +18,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-03-27 10:59+0900\n"
 "PO-Revision-Date: 2017-02-16 17:32+0000\n"
-"Last-Translator: Welington Carlos <wcarlos3@gmail.com>, 2018\n"
+"Last-Translator: felipe caridade <caridade500@gmail.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -719,7 +720,7 @@ msgstr ""
 
 #: ../../glossary.rst:341
 msgid "f-string"
-msgstr ""
+msgstr "f-string"
 
 #: ../../glossary.rst:343
 msgid ""
@@ -1831,7 +1832,7 @@ msgstr ""
 
 #: ../../glossary.rst:867
 msgid "PEP"
-msgstr ""
+msgstr "PEP"
 
 #: ../../glossary.rst:869
 msgid ""
@@ -2082,7 +2083,7 @@ msgstr ""
 
 #: ../../glossary.rst:1014
 msgid "statement"
-msgstr ""
+msgstr "declaração"
 
 #: ../../glossary.rst:1016
 msgid ""
@@ -2160,7 +2161,7 @@ msgstr ""
 
 #: ../../glossary.rst:1056
 msgid "type alias"
-msgstr ""
+msgstr "tipo alias"
 
 #: ../../glossary.rst:1058
 msgid "A synonym for a type, created by assigning the type to an identifier."
@@ -2182,7 +2183,7 @@ msgstr ""
 
 #: ../../glossary.rst:1079
 msgid "type hint"
-msgstr ""
+msgstr "dica do tipo"
 
 #: ../../glossary.rst:1081
 msgid ""
@@ -2218,7 +2219,7 @@ msgstr ""
 
 #: ../../glossary.rst:1100
 msgid "variable annotation"
-msgstr ""
+msgstr "anotação variável"
 
 #: ../../glossary.rst:1102
 msgid "An :term:`annotation` of a variable or a class attribute."
@@ -2247,7 +2248,7 @@ msgstr ""
 
 #: ../../glossary.rst:1119
 msgid "virtual environment"
-msgstr ""
+msgstr "ambiente virtual"
 
 #: ../../glossary.rst:1121
 msgid ""
