--- a/tutorial/introduction.po
+++ b/tutorial/introduction.po
@@ -8,15 +8,17 @@
 # Leticia Portella <leportella@gmail.com>, 2017
 # Humberto Rocha <humrochagf@gmail.com>, 2017
 # Claudio Rogerio Carvalho Filho, 2017
+# felipe caridade <caridade500@gmail.com>, 2019
+# Hildeberto Abreu Magalhães <hildeberto@gmail.com>, 2019
 #
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-01 10:14+0900\n"
+"POT-Creation-Date: 2019-05-06 11:31+0900\n"
 "PO-Revision-Date: 2017-02-16 23:41+0000\n"
-"Last-Translator: Claudio Rogerio Carvalho Filho, 2017\n"
+"Last-Translator: Hildeberto Abreu Magalhães <hildeberto@gmail.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -478,11 +480,9 @@ msgstr ""
 
 #: ../../tutorial/introduction.rst:386
 msgid ""
-"Like strings (and all other built-in :term:`sequence` type), lists can be "
+"Like strings (and all other built-in :term:`sequence` types), lists can be "
 "indexed and sliced::"
 msgstr ""
-"Como Strings (e todos os outros tipos built-in :term:`sequence`), as listas "
-"podem ser indexadas e fatiadas::"
 
 #: ../../tutorial/introduction.rst:396
 msgid ""
@@ -549,6 +549,10 @@ msgid ""
 "`Fibonacci series <https://en.wikipedia.org/wiki/Fibonacci_number>`_ as "
 "follows::"
 msgstr ""
+"Claro, podemos usar o Python para tarefas mais complicadas do que adicionar "
+"dois e dois juntos. Por exemplo, podemos escrever uma sub-sequência inicial "
+"da série de Fibonacci <https://en.wikipedia.org/wiki/Fibonacci_number> `_ da "
+"seguinte forma:"
 
 #: ../../tutorial/introduction.rst:488
 msgid "This example introduces several new features."
@@ -581,6 +585,15 @@ msgid ""
 "than), ``>`` (greater than), ``==`` (equal to), ``<=`` (less than or equal "
 "to), ``>=`` (greater than or equal to) and ``!=`` (not equal to)."
 msgstr ""
+"O laço de repetição :keyword:`while` executa enquanto a condição (aqui: ``a "
+"< 10``) permanece verdadeira. Em Python, como em C, qualquer valor inteiro "
+"que não seja zero é considerado verdadeiro; zero é considerado falso. A "
+"condição pode também ser uma cadeia de caracteres ou uma lista, ou qualquer "
+"sequência; qualquer coisa com um tamanho maior que zero é verdadeiro, "
+"enquanto sequências vazias são falsas. O test usado no exemplo é uma "
+"comparação simples. Os operadores padronizados de comparação são escritos "
+"como em C: ``<`` (menor que), ``>`` (maior que), ``==`` (igual), ``<=`` "
+"(menor ou igual), ``>=`` (maior ou igual) e ``!=`` (diferente)."
 
 #: ../../tutorial/introduction.rst:505
 msgid ""
