--- a/tutorial/modules.po
+++ b/tutorial/modules.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-04-12 11:10+0900\n"
+"POT-Creation-Date: 2019-05-01 11:19+0900\n"
 "PO-Revision-Date: 2017-02-16 23:41+0000\n"
 "Last-Translator: Claudio Rogerio Carvalho Filho, 2017\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
@@ -746,15 +746,11 @@ msgstr ""
 
 #: ../../tutorial/modules.rst:526
 msgid ""
-"Remember, there is nothing wrong with using ``from Package import "
+"Remember, there is nothing wrong with using ``from package import "
 "specific_submodule``!  In fact, this is the recommended notation unless the "
 "importing module needs to use submodules with the same name from different "
 "packages."
 msgstr ""
-"Lembre-se que não há nada de errado em utilizar ``from pacote import\n"
-"submodulo_especifico``! De fato, essa é a notação recomendada a menos que o\n"
-"módulo efetuando a importação precise utilizar submódulos homônimos de\n"
-"diferentes pacotes."
 
 #: ../../tutorial/modules.rst:533
 msgid "Intra-package References"
