--- a/tutorial/venv.po
+++ b/tutorial/venv.po
@@ -5,8 +5,8 @@
 #
 # Translators:
 # Ruan Aragão <ruanaragao2@gmail.com>, 2017
-# Raphael Mendonça, 2017
 # Leticia Portella <leportella@gmail.com>, 2017
+# Adorilson Bezerra <adorilson@gmail.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -15,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-01-01 10:14+0900\n"
 "PO-Revision-Date: 2017-02-16 23:41+0000\n"
-"Last-Translator: Leticia Portella <leportella@gmail.com>, 2017\n"
+"Last-Translator: Adorilson Bezerra <adorilson@gmail.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -26,7 +26,7 @@ msgstr ""
 
 #: ../../tutorial/venv.rst:6
 msgid "Virtual Environments and Packages"
-msgstr "Pacotes de Ambientes Virtuais"
+msgstr "Ambientes virtuais e pacotes"
 
 #: ../../tutorial/venv.rst:9
 msgid "Introduction"
@@ -42,9 +42,9 @@ msgid ""
 msgstr ""
 "Aplicações em Python normalmente usam pacotes e módulos que não vêm como "
 "parte da instalação padrão. Aplicações as vezes necessitam uma versão "
-"específica de um pacote, porque ela requer que algum problema em particular "
-"tenha sido consertado ou foi escrita utilizando-se de uma versão obsoleta do "
-"pacote."
+"específica de uma biblioteca, porque ela requer que algum problema em "
+"particular tenha sido consertado ou foi escrita utilizando-se de uma versão "
+"obsoleta da interface da biblioteca."
 
 #: ../../tutorial/venv.rst:17
 msgid ""
@@ -58,7 +58,7 @@ msgstr ""
 "preencha os requisitos de qualquer aplicação. Se uma aplicação A necessita a "
 "versão 1.0 de um módulo particular mas a aplicação B necessita a versão 2.0, "
 "os requisitos entrarão em conflito e instalar qualquer uma das duas versões "
-"1.0 ou 2.0 fará com que uma das aplicação não consiga rodar. "
+"1.0 ou 2.0 fará com que uma das aplicações não consiga executar. "
 
 #: ../../tutorial/venv.rst:23
 msgid ""
@@ -66,9 +66,9 @@ msgid ""
 "self-contained directory tree that contains a Python installation for a "
 "particular version of Python, plus a number of additional packages."
 msgstr ""
-"A solução para este problema foi criar um :term:`virtual environment`, uma "
-"árvore de diretórios que contém uma instalação Python para uma versão "
-"particular do Python, além de uma série de pacotes adicionais. "
+"A solução para este problema é criar um :term:`ambiente virtual`, uma árvore "
+"de diretórios que contém uma instalação Python para uma versão particular do "
+"Python, além de uma série de pacotes adicionais. "
 
 #: ../../tutorial/venv.rst:27
 msgid ""
@@ -79,16 +79,16 @@ msgid ""
 "application B requires a library be upgraded to version 3.0, this will not "
 "affect application A's environment."
 msgstr ""
-"Diferentes aplicações podem então usar diferentes virtual environments. Para "
+"Diferentes aplicações podem então usar diferentes ambientes virtuais. Para "
 "resolver o exemplo anterior de requisitos conflitantes, a aplicação A deve "
-"ter seu próprio virtual environment com a versão 1.0 instalada enquanto a "
-"aplicação B vai possuir outro virtual environment com a versão 2.0. Se a "
-"aplicação B precisar fazer um upgrade para a versão 3.0, isso não irá afetar "
-"o ambiente da aplicação A."
+"ter seu próprio ambiente virtual com a versão 1.0 instalada enquanto a "
+"aplicação B vai possuir outro ambiente virtual com a versão 2.0. Se a "
+"aplicação B precisar fazer uma atualização para a versão 3.0, isso não "
+"afetará o ambiente da aplicação A."
 
 #: ../../tutorial/venv.rst:36
 msgid "Creating Virtual Environments"
-msgstr "Criando Virtual Environments"
+msgstr "Criando ambientes virtuais"
 
 #: ../../tutorial/venv.rst:38
 msgid ""
@@ -98,11 +98,11 @@ msgid ""
 "system, you can select a specific Python version by running ``python3`` or "
 "whichever version you want."
 msgstr ""
-"O módulo usado para criar e gerenciar virtual environments é chamado :mod:"
+"O módulo usado para criar e gerenciar ambientes virtuais é chamado :mod:"
 "`venv`. O :mod:`venv` normalmente irá instalar a versão mais recente de "
 "Python que você tiver disponível. Se você tiver múltiplas versões de Python "
-"no seus sistema, você pode selecionar uma versão específica do Python "
-"através do comando ``python3`` ou qualquer versão que você desejar."
+"no seu sistema, você pode selecionar uma versão específica do Python "
+"executando ``python3`` ou qualquer versão que você desejar."
 
 #: ../../tutorial/venv.rst:44
 msgid ""
@@ -110,8 +110,8 @@ msgid ""
 "place it, and run the :mod:`venv` module as a script with the directory "
 "path::"
 msgstr ""
-"Para criar um virtual environment, escolha um diretório onde deseja colocá-"
-"lo e rode o módulo :mod:`venv` como um script no caminho do diretório::"
+"Para criar um ambiente virtual, escolha um diretório onde deseja colocá-lo e "
+"execute o módulo :mod:`venv` como um script com o caminho do diretório::"
 
 #: ../../tutorial/venv.rst:49
 msgid ""
@@ -125,15 +125,15 @@ msgstr ""
 
 #: ../../tutorial/venv.rst:53
 msgid "Once you've created a virtual environment, you may activate it."
-msgstr "Uma vez criado seu virtual environment, você deve ativá-lo."
+msgstr "Uma vez criado seu ambiente virtual, você deve ativá-lo."
 
 #: ../../tutorial/venv.rst:55
 msgid "On Windows, run::"
-msgstr "No Windows, rode::"
+msgstr "No Windows, execute::"
 
 #: ../../tutorial/venv.rst:59
 msgid "On Unix or MacOS, run::"
-msgstr "No Unix ou no MacOS, rode::"
+msgstr "No Unix ou no MacOS, executa::"
 
 #: ../../tutorial/venv.rst:63
 msgid ""
@@ -152,14 +152,14 @@ msgid ""
 "running ``python`` will get you that particular version and installation of "
 "Python. For example:"
 msgstr ""
-"Ao ativar seu virtual environment haverá uma mudança no prompt do shell para "
-"mostrar qual virtual environment você está utilizando e modificará o "
-"ambiente para que quando você rodar ``python`` você irá ativar a versão e "
-"instalação do Python particular àquele ambiente. Por exemplo:"
+"Ao ativar seu ambiente virtual haverá uma mudança no prompt do shell para "
+"mostrar qual ambiente virtual você está usando e modificará o ambiente para "
+"que quando você executar ``python`` ativar a versão e instalação do Python "
+"particular àquele ambiente. Por exemplo:"
 
 #: ../../tutorial/venv.rst:87
 msgid "Managing Packages with pip"
-msgstr "Genreciando Pacotes com o pip"
+msgstr "Gerenciando pacotes com o pip"
 
 #: ../../tutorial/venv.rst:89
 msgid ""
@@ -169,6 +169,11 @@ msgid ""
 "by going to it in your web browser, or you can use ``pip``'s limited search "
 "feature:"
 msgstr ""
+"Você pode instalar, atualizar e remover pacotes usando um programa chamado :"
+"program:`pip`. Por padrão ``pip`` irá instalar pacotes do Python Package "
+"Index, <https://pypi.org>. Você pode navegar pelo Python Package Index "
+"através do seu navegador web, ou usando os recursos limitados de busca do "
+"``pip``:"
 
 #: ../../tutorial/venv.rst:105
 msgid ""
@@ -194,7 +199,7 @@ msgid ""
 "name  followed by ``==`` and the version number:"
 msgstr ""
 "Você também pode instalar uma versão específica de um pacote dando o nome do "
-"pacote seguido por ``==`` e o número da versão."
+"pacote seguido por ``==`` e o número da versão:"
 
 #: ../../tutorial/venv.rst:131
 msgid ""
@@ -203,10 +208,10 @@ msgid ""
 "number to get that version, or you can run ``pip install --upgrade`` to "
 "upgrade the package to the latest version:"
 msgstr ""
-"Se você estiver re-rodando esse comando, ``pip`` vai perceber que aquela "
-"versão requisitada já foi instalada e não fará nada. Você pode definir uma "
-"versão diferente para instalar aquela versão ou você pode rodar ``pip "
-"install --upgrade``  para fazer o upgrade do pacote para a última versão."
+"Se você re-executar esse comando, ``pip`` vai perceber que aquela versão "
+"requisitada já foi instalada e não fará nada. Você pode definir uma versão "
+"diferente para instalar aquela versão ou você pode executar ``pip install --"
+"upgrade``  para fazer a atualização do pacote para a última versão."
 
 #: ../../tutorial/venv.rst:146
 msgid ""
@@ -214,7 +219,7 @@ msgid ""
 "packages from the virtual environment."
 msgstr ""
 "``pip uninstall`` seguido do nome de um ou mais pacotes irá remover os "
-"pacotes do virtual environment."
+"pacotes do ambiente virtual."
 
 #: ../../tutorial/venv.rst:149
 msgid "``pip show`` will display information about a particular package:"
@@ -226,7 +231,7 @@ msgid ""
 "environment:"
 msgstr ""
 "``pip list`` irá apresentar uma lista de todos os pacotes instalados no "
-"virtual environment."
+"ambiente virtual."
 
 #: ../../tutorial/venv.rst:178
 msgid ""
@@ -235,8 +240,8 @@ msgid ""
 "is to put this list in a ``requirements.txt`` file:"
 msgstr ""
 "``pip freeze`` irá mostrar uma lista dos pacotes instalados, mas o resultado "
-"mostra um formato que o ``pip install`` aceita. Uma convenção comum é "
-"colocar essa lista em um arquivo chamado ``requirements.txt``:"
+"usa o formato que o ``pip install`` aceita. Uma convenção comum é colocar "
+"essa lista em um arquivo chamado ``requirements.txt``:"
 
 #: ../../tutorial/venv.rst:190
 msgid ""
@@ -244,7 +249,7 @@ msgid ""
 "shipped as part of an application.  Users can then install all the necessary "
 "packages with ``install -r``:"
 msgstr ""
-"O arquivo ``requirements.txt`` pode ser commitado no controle de versão e "
+"O arquivo ``requirements.txt`` pode ser submetido no controle de versão e "
 "adicionado como parte da aplicação. Usuários poderão então instalar todos os "
 "pacotes necessários com um ``install -r``:"
 
