--- a/tutorial/whatnow.po
+++ b/tutorial/whatnow.po
@@ -6,6 +6,7 @@
 # Translators:
 # Raphael Mendonça, 2017
 # Otávio Carneiro <otavio@carneiro.blog.br>, 2017
+# Adorilson Bezerra <adorilson@gmail.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-01-01 10:14+0900\n"
 "PO-Revision-Date: 2017-02-16 23:41+0000\n"
-"Last-Translator: Otávio Carneiro <otavio@carneiro.blog.br>, 2017\n"
+"Last-Translator: Adorilson Bezerra <adorilson@gmail.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -59,13 +60,13 @@ msgid ""
 "compress data, and many other tasks. Skimming through the Library Reference "
 "will give you an idea of what's available."
 msgstr ""
-"Você deve percorrer este manual, que lhe dará material completo (ainda que "
-"breve) sobre tipos, funções e módulos na biblioteca padrão. A distribuição "
-"padrão do Python inclui *muito* código adicional. Há módulos para ler "
-"mailboxes Unix, baixar documentos via HTTP, gerar números aleatórios, "
-"processar opções de linha de comando, escrever programas CGI, comprimir "
-"dados a muitas outras tarefas. Uma lida rápida da Referência da Biblioteca "
-"lhe dará uma ideia do que está disponível."
+"Você deveria navegar através deste manual, que lhe dará material completo "
+"(ainda que breve) de referência sobre tipos, funções e módulos na biblioteca "
+"padrão. A distribuição padrão do Python inclui *muito* código adicional. Há "
+"módulos para ler caixa de correio Unix, baixar documentos via HTTP, gerar "
+"números aleatórios, processar opções de linha de comando, escrever programas "
+"CGI, comprimir dados a muitas outras tarefas. Uma lida rápida da Referência "
+"da Biblioteca lhe dará uma ideia do que está disponível."
 
 #: ../../tutorial/whatnow.rst:24
 msgid ""
@@ -98,9 +99,9 @@ msgid ""
 "on your geographical location."
 msgstr ""
 "https://www.python.org:  O principal website sobre Python. Ele contém "
-"código, documentação e aponta para páginas relacionadas ao Python na Web. "
-"Esse website tem mirrors em vários lugares do mundo como Europa, Japão e "
-"Austrália; um mirror pode ser mais rápido que o site principal, dependendo "
+"código, documentação e aponta para páginas na Web relacionadas ao Python. "
+"Esse site é espelhado em vários lugares do mundo como Europa, Japão e "
+"Austrália; um espelho pode ser mais rápido que o site principal, dependendo "
 "da sua localização geográfica."
 
 #: ../../tutorial/whatnow.rst:39
@@ -114,6 +115,10 @@ msgid ""
 "for download.  Once you begin releasing code, you can register it here so "
 "that others can find it."
 msgstr ""
+"O Índice de Pacotes Python (Python Package Index), anteriormente apelidado "
+"de Cheese Shop, é um índice de módulos Python criados pelos usuários "
+"disponíveis para download. Uma vez que você começa a publicar código, pode "
+"registrá-los aqui para que outros possam encontrá-los."
 
 #: ../../tutorial/whatnow.rst:46
 msgid ""
@@ -122,11 +127,11 @@ msgid ""
 "Particularly notable contributions are collected in a book also titled "
 "Python Cookbook (O'Reilly & Associates, ISBN 0-596-00797-3.)"
 msgstr ""
-"https://code.activestate.com/recipes/langs/python/: O livro de receitas de "
-"Python (Python Cookbook) é uma grande coleção de códigos de exemplo, módulos "
-"maiores e scripts úteis. Contribuições particularmente notáveis são "
-"coletadas em um livro também entitulado Python Cookbook (O'Reilly & "
-"Associates, ISBN 0-596-00797-3.)"
+"https://code.activestate.com/recipes/langs/python/: O Python Cookbook (livro "
+"de receitas de Python) é uma grande coleção de exemplos de código, módulos "
+"maiores e scripts úteis.Contribuições particularmente notáveis são coletadas "
+"em um livro também chamado Python Cookbook (O'Reilly & Associates, ISBN "
+"0-596-00797-3.)"
 
 #: ../../tutorial/whatnow.rst:51
 msgid ""
@@ -143,8 +148,8 @@ msgid ""
 "as linear algebra, Fourier transforms, non-linear solvers, random number "
 "distributions, statistical analysis and the like."
 msgstr ""
-"https://scipy.org: O projeto Python Científico (Scientific Python) inclui "
-"módulos para computação e manipulação rápida de arrays e também hospeda "
+"https://scipy.org: O projeto Scientific Python ( Python Científico) inclui "
+"módulos para computação e manipulação rápida de vetores e também hospeda "
 "pacotes para coisas similares como álgebra linear, transformações de "
 "Fourier, resolvedores não-lineares, distribuições de números aleatórios, "
 "análise estatística e afins."
@@ -165,7 +170,10 @@ msgstr ""
 "mensagens postadas em um são automaticamente encaminhadas ao outro. Há "
 "centenas de postagem diárias perguntando (e respondendo) perguntas, "
 "sugerindo novas funcionalidades e anunciando novos módulos. E-mails "
-"arquivados estão disponíveis em https://mail.python.org/pipermail/."
+"arquivados estão disponíveis em https://mail.python.org/pipermail/. Existe "
+"também o grupo de discussão da comunidade brasileira de Python: python-"
+"brasil no Google Groups (http://groups.google.com/group/python-brasil), com "
+"discussões de ótimo nível técnico."
 
 #: ../../tutorial/whatnow.rst:67
 msgid ""
