--- a/c-api/intro.po
+++ b/c-api/intro.po
@@ -7,6 +7,7 @@
 # Ruan Aragão <ruanaragao2@gmail.com>, 2017
 # Leticia Portella <leportella@gmail.com>, 2017
 # Raphael Mendonça, 2017
+# felipe caridade <caridade500@gmail.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -15,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-04-13 11:09+0900\n"
 "PO-Revision-Date: 2017-02-16 17:36+0000\n"
-"Last-Translator: Raphael Mendonça, 2017\n"
+"Last-Translator: felipe caridade <caridade500@gmail.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -49,6 +50,12 @@ msgid ""
 "applications since its early existence, the process of embedding Python is "
 "less straightforward than writing an extension."
 msgstr ""
+"Escrever um módulo de extensão é um processo relativamente bem compreendido, "
+"no qual uma abordagem de \"livro de receitas\" funciona bem. Existem várias "
+"ferramentas que automatizam o processo até certo ponto. Embora as pessoas "
+"tenham incorporado o Python em outros aplicativos desde sua existência "
+"inicial, o processo de incorporação do Python é menos direto do que escrever "
+"uma extensão."
 
 #: ../../c-api/intro.rst:26
 msgid ""
@@ -61,7 +68,7 @@ msgstr ""
 
 #: ../../c-api/intro.rst:34
 msgid "Coding standards"
-msgstr ""
+msgstr "Padrões de codificação"
 
 #: ../../c-api/intro.rst:36
 msgid ""
@@ -150,7 +157,7 @@ msgstr ""
 
 #: ../../c-api/intro.rst:99
 msgid "Useful macros"
-msgstr ""
+msgstr "Macros úteis"
 
 #: ../../c-api/intro.rst:101
 msgid ""
@@ -170,15 +177,15 @@ msgstr ""
 
 #: ../../c-api/intro.rst:117
 msgid "Return the absolute value of ``x``."
-msgstr ""
+msgstr "Retorna o valor absoluto de ``x``."
 
 #: ../../c-api/intro.rst:123
 msgid "Return the minimum value between ``x`` and ``y``."
-msgstr ""
+msgstr "Retorna o valor mínimo entre ``x`` e ``y``."
 
 #: ../../c-api/intro.rst:129
 msgid "Return the maximum value between ``x`` and ``y``."
-msgstr ""
+msgstr "Retorna o valor máximo entre ``x`` e ``y``."
 
 #: ../../c-api/intro.rst:135
 msgid ""
@@ -209,7 +216,7 @@ msgstr ""
 
 #: ../../c-api/intro.rst:167
 msgid "Objects, Types and Reference Counts"
-msgstr ""
+msgstr "Objetos, tipos e contagens de referência"
 
 #: ../../c-api/intro.rst:171
 msgid ""
@@ -239,7 +246,7 @@ msgstr ""
 
 #: ../../c-api/intro.rst:193
 msgid "Reference Counts"
-msgstr ""
+msgstr "Contagens de referência"
 
 #: ../../c-api/intro.rst:195
 msgid ""
@@ -254,6 +261,17 @@ msgid ""
 "(There's an obvious problem  with objects that reference each other here; "
 "for now, the solution is  \"don't do that.\")"
 msgstr ""
+"A contagem de referência é importante porque os computadores de hoje têm um "
+"tamanho de memória finito (e geralmente muito limitado); Conta quantos "
+"lugares diferentes existem que têm uma referência a um objeto. Esse local "
+"poderia ser outro objeto, uma variável C global (ou estática) ou uma "
+"variável local em alguma função C. Quando a contagem de referência de um "
+"objeto se torna zero, o objeto é desalocado. Se contiver referências a "
+"outros objetos, sua contagem de referência será diminuída. Esses outros "
+"objetos podem ser desalocados, por sua vez, se esse decremento fizer com que "
+"sua contagem de referência se torne zero e assim por diante. (Há um problema "
+"óbvio com objetos que fazem referência um ao outro aqui; por enquanto, a "
+"solução é \"não faça isso\")."
 
 #: ../../c-api/intro.rst:210
 msgid ""
@@ -313,7 +331,7 @@ msgstr ""
 
 #: ../../c-api/intro.rst:256
 msgid "Reference Count Details"
-msgstr ""
+msgstr "Detalhes da contagem de referência"
 
 #: ../../c-api/intro.rst:258
 msgid ""
@@ -428,7 +446,7 @@ msgstr ""
 
 #: ../../c-api/intro.rst:435
 msgid "Types"
-msgstr ""
+msgstr "Tipos"
 
 #: ../../c-api/intro.rst:437
 msgid ""
@@ -548,7 +566,7 @@ msgstr ""
 
 #: ../../c-api/intro.rst:597
 msgid "Embedding Python"
-msgstr ""
+msgstr "Incorporando Python"
 
 #: ../../c-api/intro.rst:599
 msgid ""
@@ -624,7 +642,7 @@ msgstr ""
 
 #: ../../c-api/intro.rst:672
 msgid "Debugging Builds"
-msgstr ""
+msgstr "Construções de Depuração"
 
 #: ../../c-api/intro.rst:674
 msgid ""
@@ -658,20 +676,24 @@ msgid ""
 "In addition to the reference count debugging described below, the following "
 "extra checks are performed:"
 msgstr ""
+"Além da depuração de contagem de referência descrita abaixo, as seguintes "
+"verificações extras são executadas:"
 
 #: ../../c-api/intro.rst:694
 msgid "Extra checks are added to the object allocator."
-msgstr ""
+msgstr "Verificações extras são adicionadas ao alocador de objeto."
 
 #: ../../c-api/intro.rst:696
 msgid "Extra checks are added to the parser and compiler."
-msgstr ""
+msgstr "Verificações extras são adicionadas ao analisador e ao compilador."
 
 #: ../../c-api/intro.rst:698
 msgid ""
 "Downcasts from wide types to narrow types are checked for loss of "
 "information."
 msgstr ""
+"Downcasts de tipos amplos para tipos restritos são verificados quanto à "
+"perda de informações."
 
 #: ../../c-api/intro.rst:700
 msgid ""
@@ -682,6 +704,8 @@ msgstr ""
 #: ../../c-api/intro.rst:703
 msgid "Sanity checks of the input arguments are added to frame creation."
 msgstr ""
+"As verificações de integridade dos argumentos de entrada são adicionadas à "
+"criação de quadros."
 
 #: ../../c-api/intro.rst:705
 msgid ""
@@ -694,18 +718,21 @@ msgid ""
 "Low-level tracing and extra exception checking are added to the runtime "
 "virtual machine."
 msgstr ""
+"O rastreamento de baixo nível e a verificação de exceções extras são "
+"adicionados à máquina virtual de tempo de execução."
 
 #: ../../c-api/intro.rst:711
 msgid "Extra checks are added to the memory arena implementation."
 msgstr ""
+"Verificações extras são adicionadas à implementação da arena de memória."
 
 #: ../../c-api/intro.rst:713
 msgid "Extra debugging is added to the thread module."
-msgstr ""
+msgstr "Depuração extra é adicionada ao módulo de thread."
 
 #: ../../c-api/intro.rst:715
 msgid "There may be additional checks not mentioned here."
-msgstr ""
+msgstr "Pode haver verificações adicionais não mencionadas aqui."
 
 #: ../../c-api/intro.rst:717
 msgid ""
