--- a/extending/extending.po
+++ b/extending/extending.po
@@ -6,6 +6,7 @@
 # Translators:
 # Raphael Mendonça, 2017
 # Claudio Rogerio Carvalho Filho, 2017
+# felipe caridade <caridade500@gmail.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-04-13 11:09+0900\n"
 "PO-Revision-Date: 2017-02-16 17:42+0000\n"
-"Last-Translator: Claudio Rogerio Carvalho Filho, 2017\n"
+"Last-Translator: felipe caridade <caridade500@gmail.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -743,7 +744,7 @@ msgstr ""
 
 #: ../../extending/extending.rst:834
 msgid "Reference Counts"
-msgstr ""
+msgstr "Contagens de referência"
 
 #: ../../extending/extending.rst:836
 msgid ""
