--- a/faq/general.po
+++ b/faq/general.po
@@ -7,6 +7,7 @@
 # Bruno Leuenroth <brucole@gmail.com>, 2017
 # Claudio Rogerio Carvalho Filho, 2018
 # Gustavo de Carvalho Sales <gt.salles@gmail.com>, 2018
+# felipe caridade <caridade500@gmail.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -15,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-03-27 10:59+0900\n"
 "PO-Revision-Date: 2017-02-16 17:43+0000\n"
-"Last-Translator: Gustavo de Carvalho Sales <gt.salles@gmail.com>, 2018\n"
+"Last-Translator: felipe caridade <caridade500@gmail.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -386,6 +387,9 @@ msgid ""
 "<https://devguide.python.org/setup/>`__ for more information on getting the "
 "source code and compiling it."
 msgstr ""
+"Consulte a seção Introdução do Guia do Desenvolvedor Python <https://"
+"devguide.python.org/setup/>`__ para obter mais informações sobre como obter "
+"o código-fonte e compilá-lo."
 
 #: ../../faq/general.rst:175
 msgid "How do I get documentation on Python?"
@@ -498,6 +502,9 @@ msgid ""
 "You can also access the development version of Python through Git.  See `The "
 "Python Developer's Guide <https://devguide.python.org/>`_ for details."
 msgstr ""
+"Você também pode acessar a versão de desenvolvimento do Python através do "
+"Git. Veja `O Guia do Desenvolvedor Python <https://devguide.python.org/>` _ "
+"para detalhes."
 
 #: ../../faq/general.rst:230
 msgid "How do I submit bug reports and patches for Python?"
@@ -533,6 +540,8 @@ msgid ""
 "For more information on how Python is developed, consult `the Python "
 "Developer's Guide <https://devguide.python.org/>`_."
 msgstr ""
+"Para mais informações sobre como o Python é desenvolvido, consulte `o Guia "
+"do Desenvolvedor Python <https://devguide.python.org/>` _."
 
 #: ../../faq/general.rst:246
 msgid "Are there any published articles about Python that I can reference?"
@@ -594,6 +603,9 @@ msgid ""
 "managed by the Python Infrastructure Team. Details `here <http://infra.psf."
 "io>`__."
 msgstr ""
+"A infraestrutura do projeto Python está localizada em todo o mundo e é "
+"gerenciada pela equipe de infraestrutura do Python. Detalhes `aqui <http://"
+"infra.psf.io>` __."
 
 #: ../../faq/general.rst:276
 msgid "Why is it called Python?"
@@ -648,6 +660,13 @@ msgid ""
 "and it's guaranteed that interfaces will remain the same throughout a series "
 "of bugfix releases."
 msgstr ""
+"Os desenvolvedores lançam versões \"bugfix\" de versões mais antigas, então "
+"a estabilidade dos lançamentos existentes melhora gradualmente. As "
+"liberações de correções de erros, indicadas por um terceiro componente do "
+"número da versão (por exemplo, 3.5.3, 3.6.2), são gerenciadas para "
+"estabilidade; somente correções para problemas conhecidos são incluídas em "
+"uma versão de correções de erros, e é garantido que as interfaces "
+"permanecerão as mesmas durante uma série de liberações de correções de erros."
 
 #: ../../faq/general.rst:308
 msgid ""
@@ -658,6 +677,12 @@ msgid ""
 "`it will not be maintained after January 1, 2020 <https://www.python.org/dev/"
 "peps/pep-0373/>`_."
 msgstr ""
+"As últimas versões estáveis ​​sempre podem ser encontradas na página de "
+"download do Python <https://www.python.org/downloads/> `_. Existem duas "
+"versões prontas para produção do Python: 2.xe 3.x. A versão recomendada é 3."
+"x, que é suportada pelas bibliotecas mais usadas. Embora 2.x ainda seja "
+"amplamente utilizado, `não será mantido após 1 de janeiro de 2020 <https://"
+"www.python.org/dev/peps/pep-0373/>` _."
 
 #: ../../faq/general.rst:315
 msgid "How many people are using Python?"
