--- a/reference/datamodel.po
+++ b/reference/datamodel.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-03-28 11:05+0900\n"
+"POT-Creation-Date: 2019-05-06 11:31+0900\n"
 "PO-Revision-Date: 2017-02-16 23:38+0000\n"
 "Last-Translator: Claudio Rogerio Carvalho Filho, 2017\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
@@ -1537,11 +1537,11 @@ msgid ""
 "Called by the :func:`format` built-in function, and by extension, evaluation "
 "of :ref:`formatted string literals <f-strings>` and the :meth:`str.format` "
 "method, to produce a \"formatted\" string representation of an object. The "
-"``format_spec`` argument is a string that contains a description of the "
-"formatting options desired. The interpretation of the ``format_spec`` "
-"argument is up to the type implementing :meth:`__format__`, however most "
-"classes will either delegate formatting to one of the built-in types, or use "
-"a similar formatting option syntax."
+"*format_spec* argument is a string that contains a description of the "
+"formatting options desired. The interpretation of the *format_spec* argument "
+"is up to the type implementing :meth:`__format__`, however most classes will "
+"either delegate formatting to one of the built-in types, or use a similar "
+"formatting option syntax."
 msgstr ""
 
 #: ../../reference/datamodel.rst:1325
