--- a/tutorial/stdlib.po
+++ b/tutorial/stdlib.po
@@ -5,8 +5,9 @@
 #
 # Translators:
 # Leticia Portella <leportella@gmail.com>, 2017
-# Misael borges <misael@planosassessoria.com.br>, 2017
 # Claudio Rogerio Carvalho Filho, 2017
+# Misael borges <misael@planosassessoria.com.br>, 2017
+# Adorilson Bezerra <adorilson@gmail.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -15,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-01-01 10:14+0900\n"
 "PO-Revision-Date: 2017-02-16 23:41+0000\n"
-"Last-Translator: Claudio Rogerio Carvalho Filho, 2017\n"
+"Last-Translator: Adorilson Bezerra <adorilson@gmail.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -26,18 +27,18 @@ msgstr ""
 
 #: ../../tutorial/stdlib.rst:5
 msgid "Brief Tour of the Standard Library"
-msgstr "Breve Tour na Biblioteca Padrão"
+msgstr "Um breve passeio pela biblioteca padrão"
 
 #: ../../tutorial/stdlib.rst:11
 msgid "Operating System Interface"
-msgstr "Operando a Interface do Sistema"
+msgstr "Interface com o sistema operacional"
 
 #: ../../tutorial/stdlib.rst:13
 msgid ""
 "The :mod:`os` module provides dozens of functions for interacting with the "
 "operating system::"
 msgstr ""
-"O módulo :mod:`os` contém dezenas de funções para interagir com o sistema "
+"O módulo :mod:`os` fornece dúzias de funções para interagir com o sistema "
 "operacional::"
 
 #: ../../tutorial/stdlib.rst:23
@@ -46,41 +47,41 @@ msgid ""
 "This will keep :func:`os.open` from shadowing the built-in :func:`open` "
 "function which operates much differently."
 msgstr ""
-"Verifique que você usou ``import os`` ao invés de ``from os import *``. Isso "
-"evita que a função :func:`os.open` sobreescreva a função built-in :func:"
-"`open` que opera de forma completamente diferente."
+"Tome cuidado para usar a forma ``import os`` ao invés de ``from os import "
+"*``. Isso evitará que :func:`os.open` oculte a função :func:`open` que opera "
+"de forma muito diferente."
 
 #: ../../tutorial/stdlib.rst:29
 msgid ""
 "The built-in :func:`dir` and :func:`help` functions are useful as "
 "interactive aids for working with large modules like :mod:`os`::"
 msgstr ""
-"As funções built-in :func:`dir` e :func:`help` são úteis como ajudas "
-"interativas para trabalhar com módulos grandes como o módulo :mod:`os`::"
+"As funções embutidas :func:`dir` e :func:`help` são úteis como um sistema de "
+"ajuda interativa pra lidar com módulos grandes como :mod:`os`::"
 
 #: ../../tutorial/stdlib.rst:38
 msgid ""
 "For daily file and directory management tasks, the :mod:`shutil` module "
 "provides a higher level interface that is easier to use::"
 msgstr ""
-"Para tarefas gerenciais e de arquivo diárias, o módulo :mod:`shutil` permite "
-"uma interface de alto nível que é mais fácil de usar::"
+"Para tarefas de gerenciamento cotidiano de arquivos e diretórios, o módulo :"
+"mod:`shutil` fornece uma interface de alto nível que é mais simples de usar::"
 
 #: ../../tutorial/stdlib.rst:51
 msgid "File Wildcards"
-msgstr "Arquivos Wildcards"
+msgstr "Caracteres curinga"
 
 #: ../../tutorial/stdlib.rst:53
 msgid ""
 "The :mod:`glob` module provides a function for making file lists from "
 "directory wildcard searches::"
 msgstr ""
-"O módulo mod:`glob` contém uma função para criar listas de arquivos de "
-"buscas wildcard em diretórios::"
+"O módulo :mod:`glob` fornece uma função para criar listas de arquivos a "
+"partir de buscas em diretórios usando caracteres curinga::"
 
 #: ../../tutorial/stdlib.rst:64
 msgid "Command Line Arguments"
-msgstr "Argumentos de Linha de Comando"
+msgstr "Argumentos de linha de comando"
 
 #: ../../tutorial/stdlib.rst:66
 msgid ""
@@ -90,12 +91,9 @@ msgid ""
 "two three`` at the command line::"
 msgstr ""
 "Scripts geralmente precisam processar argumentos passados na linha de "
-"comando.\n"
-"Esses argumentos são armazenados como uma lista no atributo *argv* do "
-"módulo\n"
-":mod:`sys`. Por exemplo, teríamos a seguinte saída executando ``python demo."
-"py\n"
-"one two three`` na linha de comando::"
+"comando. Esses argumentos são armazenados como uma lista no atributo *argv* "
+"do módulo :mod:`sys`. Por exemplo, teríamos a seguinte saída executando "
+"``python demo.py one two three`` na linha de comando::"
 
 #: ../../tutorial/stdlib.rst:75
 msgid ""
@@ -104,8 +102,7 @@ msgid ""
 "processing is provided by the :mod:`argparse` module."
 msgstr ""
 "O módulo :mod:`getopt` processa os argumentos passados em *sys.argv* usando "
-"as\n"
-"convenções da função Unix :mod:`getopt`. Um processamento mais poderoso e\n"
+"as convenções da função Unix :mod:`getopt`. Um processamento mais poderoso e "
 "flexível é fornecido pelo módulo :mod:`argparse`."
 
 #: ../../tutorial/stdlib.rst:83
@@ -119,10 +116,8 @@ msgid ""
 "make them visible even when *stdout* has been redirected::"
 msgstr ""
 "O módulo :mod:`sys` também possui atributos para *stdin*, *stdout* e "
-"*stderr*.\n"
-"O último é usado para emitir avisos e mensagens de erros visíveis mesmo "
-"quando\n"
-"*stdout* foi redirecionado::"
+"*stderr*. O último é usado para emitir avisos e mensagens de erros visíveis "
+"mesmo quando *stdout* foi redirecionado::"
 
 #: ../../tutorial/stdlib.rst:92
 msgid "The most direct way to terminate a script is to use ``sys.exit()``."
@@ -139,9 +134,8 @@ msgid ""
 "succinct, optimized solutions::"
 msgstr ""
 "O módulo :mod:`re` fornece ferramentas para lidar com processamento de "
-"strings\n"
-"através de expressões regulares. Para reconhecimento de padrões complexos,\n"
-"expressões regulares oferecem uma solução sucinta e eficiente::"
+"strings através de expressões regulares. Para reconhecimento de padrões "
+"complexos, expressões regulares oferecem uma solução sucinta e eficiente::"
 
 #: ../../tutorial/stdlib.rst:110
 msgid ""
@@ -149,8 +143,7 @@ msgid ""
 "because they are easier to read and debug::"
 msgstr ""
 "Quando as exigências são simples, métodos de strings são preferíveis por "
-"serem\n"
-"mais fáceis de ler e depurar::"
+"serem mais fáceis de ler e depurar::"
 
 #: ../../tutorial/stdlib.rst:120
 msgid "Mathematics"
@@ -161,21 +154,21 @@ msgid ""
 "The :mod:`math` module gives access to the underlying C library functions "
 "for floating point math::"
 msgstr ""
-"O módulo :mod:`math` dá acesso às funções de biblioteca C para matemática de "
-"pontos flutuantes subjacente."
+"O módulo :mod:`math` oferece acesso as funções da biblioteca C para "
+"matemática de ponto flutuante::"
 
 #: ../../tutorial/stdlib.rst:131
 msgid "The :mod:`random` module provides tools for making random selections::"
 msgstr ""
-"O módulo :mod:`random` contém ferramentas para fazer seleções aleatórias::"
+"O módulo :mod:`random` fornece ferramentas para gerar seleções aleatórias::"
 
 #: ../../tutorial/stdlib.rst:143
 msgid ""
 "The :mod:`statistics` module calculates basic statistical properties (the "
 "mean, median, variance, etc.) of numeric data::"
 msgstr ""
-"O módulo :mod:`statistics` calcula as propriedades estatísticas básicas, por "
-"exemplo (a média, a mediana, a variação, etc.) dos dados numéricos::"
+"O módulo :mod:`statistics` calcula as propriedades estatísticas básicas (a "
+"média, a mediana, a variação, etc.) de dados numéricos::"
 
 #: ../../tutorial/stdlib.rst:155
 msgid ""
@@ -195,20 +188,20 @@ msgid ""
 "internet protocols. Two of the simplest are :mod:`urllib.request` for "
 "retrieving data from URLs and :mod:`smtplib` for sending mail::"
 msgstr ""
-"Existem vários módulos para acessar a internet e para fazer o processamento "
-"dos protocolos de internet. Dois dos mais simples são :mod:`urllib.request` "
-"usado na recuperação dos dados de URLs oir exemplo o :mod:`smtplib` é "
-"utilizado no envio de e-mails::"
+"Há diversos módulos para acesso e processamento de protocolos da internet. "
+"Dois dos mais simples são :mod:`urllib.request` para efetuar download de "
+"dados a partir de URLs e :mod:`smtplib` para enviar mensagens de correio "
+"eletrônico::"
 
 #: ../../tutorial/stdlib.rst:186
 msgid "(Note that the second example needs a mailserver running on localhost.)"
 msgstr ""
-"(Note que o segundo exemplo precisa de um servidor de email rodando em\n"
+"(Note que o segundo exemplo precisa de um servidor de email rodando em "
 "localhost.)"
 
 #: ../../tutorial/stdlib.rst:192
 msgid "Dates and Times"
-msgstr "Data e Hora"
+msgstr "Data e hora"
 
 #: ../../tutorial/stdlib.rst:194
 msgid ""
@@ -219,13 +212,10 @@ msgid ""
 "that are timezone aware. ::"
 msgstr ""
 "O módulo :mod:`datetime` fornece classes para manipulação de datas e horas "
-"nas\n"
-"mais variadas formas. Apesar da disponibilidade de aritmética com data e "
-"hora,\n"
-"o foco da implementação é na extração eficiente dos membros para formatação "
-"e\n"
-"manipulação. O módulo também oferece objetos que levam os fusos horários em\n"
-"consideração. ::"
+"nas mais variadas formas. Apesar da disponibilidade de aritmética com data e "
+"hora, o foco da implementação é na extração eficiente dos membros para "
+"formatação e manipulação. O módulo também oferece objetos que levam os fusos "
+"horários em consideração. ::"
 
 #: ../../tutorial/stdlib.rst:218
 msgid "Data Compression"
@@ -237,11 +227,9 @@ msgid ""
 "modules including: :mod:`zlib`, :mod:`gzip`, :mod:`bz2`, :mod:`lzma`, :mod:"
 "`zipfile` and :mod:`tarfile`. ::"
 msgstr ""
-"Os formatos de arquivamento e compactação de dados comuns são suportados "
-"diretamente por módulos, "
-"incluindo:                                                                                                                             :"
-"mod:`zlib`, :mod:`gzip`, :mod:`bz2`, :mod:`lzma`, :mod:`zipfile` and :mod:"
-"`tarfile`. ::"
+"Formatos comuns de arquivamento e compressão de dados estão disponíveis "
+"diretamente através de alguns módulos, entre eles: :mod:`zlib`, :mod:"
+"`gzip`, :mod:`bz2`, :mod:`lzma`, :mod:`zipfile` and :mod:`tarfile`. ::"
 
 #: ../../tutorial/stdlib.rst:240
 msgid "Performance Measurement"
@@ -253,8 +241,8 @@ msgid ""
 "performance of different approaches to the same problem. Python provides a "
 "measurement tool that answers those questions immediately."
 msgstr ""
-"Alguns usuários de Python desenvolvem um interesse profundo pelo desempenho\n"
-"relativo de diferentes abordagens para o mesmo problema. Python oferece uma\n"
+"Alguns usuários de Python desenvolvem um interesse profundo pelo desempenho "
+"relativo de diferentes abordagens para o mesmo problema. Python oferece uma "
 "ferramenta de medição que esclarece essas dúvidas rapidamente."
 
 #: ../../tutorial/stdlib.rst:246
@@ -263,10 +251,9 @@ msgid ""
 "feature instead of the traditional approach to swapping arguments. The :mod:"
 "`timeit` module quickly demonstrates a modest performance advantage::"
 msgstr ""
-"Por exemplo, pode ser tentador usar o empacotamento e desempacotamento de\n"
+"Por exemplo, pode ser tentador usar o empacotamento e desempacotamento de "
 "tuplas ao invés da abordagem tradicional de permutar os argumentos. O "
-"módulo\n"
-":mod:`timeit` rapidamente mostra uma modesta vantagem de desempenho::"
+"módulo :mod:`timeit` rapidamente mostra uma modesta vantagem de desempenho::"
 
 #: ../../tutorial/stdlib.rst:256
 msgid ""
@@ -274,9 +261,9 @@ msgid ""
 "and :mod:`pstats` modules provide tools for identifying time critical "
 "sections in larger blocks of code."
 msgstr ""
-"Em contraste com granulidade fina do módulo :mod:`timeit`,\n"
-"os módulos :mod:`profile` e :mod:`pstats` oferecem ferramentas para\n"
-"identificar os trechos mais críticos em grandes blocos de código."
+"Em contraste com granulidade fina do módulo :mod:`timeit`, os módulos :mod:"
+"`profile` e :mod:`pstats` oferecem ferramentas para identificar os trechos "
+"mais críticos em grandes blocos de código."
 
 #: ../../tutorial/stdlib.rst:264
 msgid "Quality Control"
@@ -288,11 +275,9 @@ msgid ""
 "function as it is developed and to run those tests frequently during the "
 "development process."
 msgstr ""
-"Uma das abordagens usadas no desenvolvimento de software de alta qualidade "
-"é\n"
+"Uma das abordagens usadas no desenvolvimento de software de alta qualidade é "
 "escrever testes para cada função à medida que é desenvolvida e executar "
-"esses\n"
-"testes frequentemente durante o processo de desenvolvimento."
+"esses testes frequentemente durante o processo de desenvolvimento."
 
 #: ../../tutorial/stdlib.rst:270
 msgid ""
@@ -303,12 +288,12 @@ msgid ""
 "example and it allows the doctest module to make sure the code remains true "
 "to the documentation::"
 msgstr ""
-"O módulo :mod:`doctest` oferece uma ferramenta para realizar um trabalho de\n"
-"varredura e validação de testes escritos nas strings de documentação\n"
-"(docstrings) de um programa. A construção dos testes é tão simples quanto\n"
-"copiar uma chamada típica juntamente com seus resultados e colá-los na\n"
-"docstring. Isto aprimora a documentação, fornecendo ao usuário um exemplo\n"
-"real, e permite que o módulo doctest verifique se o código continua fiel à\n"
+"O módulo :mod:`doctest` oferece uma ferramenta para realizar um trabalho de "
+"varredura e validação de testes escritos nas strings de documentação "
+"(docstrings) de um programa. A construção dos testes é tão simples quanto "
+"copiar uma chamada típica juntamente com seus resultados e colá-los na "
+"docstring. Isto aprimora a documentação, fornecendo ao usuário um exemplo "
+"real, e permite que o módulo doctest verifique se o código continua fiel à "
 "documentação::"
 
 #: ../../tutorial/stdlib.rst:288
@@ -317,10 +302,9 @@ msgid ""
 "module, but it allows a more comprehensive set of tests to be maintained in "
 "a separate file::"
 msgstr ""
-"O módulo :mod:`unittest` não é tão simples de usar quanto o módulo\n"
-":mod:`doctest`, mas permite que um conjunto muito maior de testes seja "
-"mantido\n"
-"em um arquivo separado::"
+"O módulo :mod:`unittest` não é tão simples de usar quanto o módulo :mod:"
+"`doctest`, mas permite que um conjunto muito maior de testes seja mantido em "
+"um arquivo separado::"
 
 #: ../../tutorial/stdlib.rst:310
 msgid "Batteries Included"
@@ -332,7 +316,7 @@ msgid ""
 "the sophisticated and robust capabilities of its larger packages. For "
 "example:"
 msgstr ""
-"Python tem uma filosofia de \"baterias incluídas\". Isso fica mais evidente\n"
+"Python tem uma filosofia de \"baterias incluídas\". Isso fica mais evidente "
 "através da sofisticação e robustez dos seus maiores pacotes. Por exemplo:"
 
 #: ../../tutorial/stdlib.rst:315
@@ -342,8 +326,8 @@ msgid ""
 "names, no direct knowledge or handling of XML is needed."
 msgstr ""
 "Os módulos :mod:`xmlrpc.client` e :mod:`xmlrpc.server`  tornam a "
-"implementação de chamadas de procedimento remoto em uma tarefa quase "
-"trivial. Apesar dos nomes dos módulos, nenhum conhecimento direto ou "
+"implementação de chamadas remotas (remote procedure calls) em uma tarefa "
+"quase trivial. Apesar dos nomes dos módulos, nenhum conhecimento direto ou "
 "manipulação de XML é necessário."
 
 #: ../../tutorial/stdlib.rst:319
@@ -355,6 +339,13 @@ msgid ""
 "structures (including attachments) and for implementing internet encoding "
 "and header protocols."
 msgstr ""
+"O pacote :mod:`email` é uma biblioteca para gerenciamento de mensagens de "
+"correio eletrônico, incluindo MIME e outros baseados no :rfc:`2822`. "
+"Diferente dos módulos :mod:`smtplib` e :mod:`poplib` que apenas enviam e "
+"recebem mensagens, o pacote :mod:`email` tem um conjunto completo de "
+"ferramentas para construir ou decodificar a estrutura de mensagens complexas "
+"(incluindo anexos) e para implementação de protocolos de codificação e "
+"cabeçalhos."
 
 #: ../../tutorial/stdlib.rst:326
 msgid ""
@@ -366,13 +357,13 @@ msgid ""
 "these modules and packages greatly simplify data interchange between Python "
 "applications and other tools."
 msgstr ""
-"O pacote :mod:`json` oferece um suporte para analisar este popular formato "
-"para troca de dados. O módulo :mod:`csv` suporta leitura e escrita direta em "
-"arquivos no formato Comma-Separated Value, comumente suportado por bancos de "
-"dados e planilhas. O processamento XML é suportado pelos pacotes :mod:`xml."
-"etree.ElementTree`, :mod:`xml.dom` e :mod:`xml.sax`. Juntos, esses módulos e "
-"pacotes simplificam muito a troca de informações entre aplicativos Python e "
-"outras ferramentas."
+"O pacote :mod:`json` oferece um suporte robusto para analisar este popular "
+"formato para troca de dados. O módulo :mod:`csv` oferece suporte para "
+"leitura e escrita direta em arquivos no formato Comma-Separated Value, "
+"comumente suportado por bancos de dados e planilhas. O processamento XML é "
+"fornecido pelos pacotes :mod:`xml.etree.ElementTree`, :mod:`xml.dom` e :mod:"
+"`xml.sax`. Juntos, esses módulos e pacotes simplificam muito a troca de "
+"informações entre aplicativos Python e outras ferramentas."
 
 #: ../../tutorial/stdlib.rst:335
 msgid ""
