Run pomerge --from **/*.po --to **/*.po

--- a/c-api/bytes.po
+++ b/c-api/bytes.po
@@ -125,7 +125,7 @@ msgstr "*n/a*"
 
 #: ../../c-api/bytes.rst:70
 msgid "The literal % character."
-msgstr "O literal % caracter."
+msgstr "O caracter literal %."
 
 #: ../../c-api/bytes.rst:72
 msgid ":attr:`%c`"
