--- a/c-api/memory.po
+++ b/c-api/memory.po
@@ -401,7 +401,7 @@ msgstr ""
 
 #: ../../c-api/memory.rst:340
 msgid "Name"
-msgstr "Name (nome)"
+msgstr "Nome"
 
 #: ../../c-api/memory.rst:340
 msgid "PyMem_RawMalloc"
