--- a/howto/curses.po
+++ b/howto/curses.po
@@ -507,7 +507,7 @@ msgstr ""
 
 #: ../../howto/curses.rst:350
 msgid "Attribute"
-msgstr "Attribute"
+msgstr "Atributo"
 
 #: ../../howto/curses.rst:352
 msgid ":const:`A_BLINK`"
