--- a/howto/descriptor.po
+++ b/howto/descriptor.po
@@ -48,7 +48,7 @@ msgstr "Conteúdo"
 
 #: ../../howto/descriptor.rst:11
 msgid "Abstract"
-msgstr "Abstrato"
+msgstr "Resumo"
 
 #: ../../howto/descriptor.rst:13
 msgid ""
