--- a/reference/datamodel.po
+++ b/reference/datamodel.po
@@ -563,7 +563,7 @@ msgstr "Atributos Especiais:"
 
 #: ../../reference/datamodel.rst:473
 msgid "Attribute"
-msgstr "Attribute"
+msgstr "Atributo"
 
 #: ../../reference/datamodel.rst:473
 msgid "Meaning"
