--- a/whatsnew/2.1.po
+++ b/whatsnew/2.1.po
@@ -1017,7 +1017,7 @@ msgstr ""
 
 #: ../../whatsnew/2.1.rst:581
 msgid "New and Improved Modules"
-msgstr "New and Improved Modules"
+msgstr "Módulos Novos ou Aprimorados"
 
 #: ../../whatsnew/2.1.rst:583
 msgid ""
