--- a/whatsnew/2.2.po
+++ b/whatsnew/2.2.po
@@ -1093,7 +1093,7 @@ msgstr "Written and implemented by Jeremy Hylton."
 
 #: ../../whatsnew/2.2.rst:934
 msgid "New and Improved Modules"
-msgstr "New and Improved Modules"
+msgstr "Módulos Novos ou Aprimorados"
 
 #: ../../whatsnew/2.2.rst:936
 msgid ""
