--- a/whatsnew/2.3.po
+++ b/whatsnew/2.3.po
@@ -992,7 +992,7 @@ msgstr ""
 
 #: ../../whatsnew/2.3.rst:966
 msgid "Other Language Changes"
-msgstr "Other Language Changes"
+msgstr "Outras mudanças na Linguagem"
 
 #: ../../whatsnew/2.3.rst:968
 msgid ""
