--- a/whatsnew/2.4.po
+++ b/whatsnew/2.4.po
@@ -865,7 +865,7 @@ msgstr ""
 
 #: ../../whatsnew/2.4.rst:774
 msgid "Other Language Changes"
-msgstr "Other Language Changes"
+msgstr "Outras mudanças na Linguagem"
 
 #: ../../whatsnew/2.4.rst:776
 msgid ""
