--- a/whatsnew/2.5.po
+++ b/whatsnew/2.5.po
@@ -1184,7 +1184,7 @@ msgstr ""
 
 #: ../../whatsnew/2.5.rst:974
 msgid "Other Language Changes"
-msgstr "Other Language Changes"
+msgstr "Outras mudanças na Linguagem"
 
 #: ../../whatsnew/2.5.rst:976
 msgid ""
