--- a/whatsnew/2.6.po
+++ b/whatsnew/2.6.po
@@ -2160,7 +2160,7 @@ msgstr ""
 
 #: ../../whatsnew/2.6.rst:1485
 msgid "Other Language Changes"
-msgstr "Other Language Changes"
+msgstr "Outras mudanças na Linguagem"
 
 #: ../../whatsnew/2.6.rst:1487
 msgid "Some smaller changes made to the core Python language are:"
@@ -2585,7 +2585,7 @@ msgstr ""
 
 #: ../../whatsnew/2.6.rst:1752
 msgid "Interpreter Changes"
-msgstr "Alterações do intérprete"
+msgstr "Alterações no interpretador"
 
 #: ../../whatsnew/2.6.rst:1754
 msgid ""
