--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -919,7 +919,7 @@ msgstr ""
 
 #: ../../whatsnew/2.7.rst:672
 msgid "Other Language Changes"
-msgstr "Other Language Changes"
+msgstr "Outras mudanças na Linguagem"
 
 #: ../../whatsnew/2.7.rst:674
 msgid "Some smaller changes made to the core Python language are:"
@@ -1288,7 +1288,7 @@ msgstr ""
 
 #: ../../whatsnew/2.7.rst:907
 msgid "Interpreter Changes"
-msgstr "Interpreter Changes"
+msgstr "Alterações no interpretador"
 
 #: ../../whatsnew/2.7.rst:909
 msgid ""
@@ -1316,7 +1316,7 @@ msgstr ""
 
 #: ../../whatsnew/2.7.rst:928
 msgid "Optimizations"
-msgstr "Optimizations"
+msgstr "Otimizações"
 
 #: ../../whatsnew/2.7.rst:930
 msgid "Several performance enhancements have been added:"
@@ -1502,7 +1502,7 @@ msgstr ""
 
 #: ../../whatsnew/2.7.rst:1025
 msgid "New and Improved Modules"
-msgstr "New and Improved Modules"
+msgstr "Módulos Novos ou Aprimorados"
 
 #: ../../whatsnew/2.7.rst:1027
 msgid ""
