--- a/whatsnew/3.2.po
+++ b/whatsnew/3.2.po
@@ -444,7 +444,7 @@ msgstr ""
 
 #: ../../whatsnew/3.2.rst:433
 msgid "Other Language Changes"
-msgstr "Other Language Changes"
+msgstr "Outras mudanças na Linguagem"
 
 #: ../../whatsnew/3.2.rst:435
 msgid "Some smaller changes made to the core Python language are:"
