--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -87,7 +87,7 @@ msgstr ""
 
 #: ../../whatsnew/3.3.rst:74
 msgid "New built-in features:"
-msgstr "Novos recursos internos:"
+msgstr "Novas funcionalidades built-in:"
 
 #: ../../whatsnew/3.3.rst:76
 msgid "Reworked :ref:`I/O exception hierarchy <pep-3151>`."
@@ -991,7 +991,7 @@ msgstr ""
 
 #: ../../whatsnew/3.3.rst:776
 msgid "Other Language Changes"
-msgstr "Other Language Changes"
+msgstr "Outras mudanças na Linguagem"
 
 #: ../../whatsnew/3.3.rst:778
 msgid "Some smaller changes made to the core Python language are:"
@@ -3290,7 +3290,7 @@ msgstr ""
 
 #: ../../whatsnew/3.3.rst:2209
 msgid "Deprecated"
-msgstr "Desusos"
+msgstr "Descontinuado"
 
 #: ../../whatsnew/3.3.rst:2212
 msgid "Unsupported Operating Systems"
