--- a/whatsnew/3.4.po
+++ b/whatsnew/3.4.po
@@ -3955,7 +3955,7 @@ msgstr ""
 
 #: ../../whatsnew/3.4.rst:2067
 msgid "Deprecated"
-msgstr "Desuso"
+msgstr "Descontinuado"
 
 #: ../../whatsnew/3.4.rst:2069
 msgid ""
