--- a/whatsnew/3.6.po
+++ b/whatsnew/3.6.po
@@ -1045,7 +1045,7 @@ msgstr ""
 
 #: ../../whatsnew/3.6.rst:738
 msgid "Other Language Changes"
-msgstr "Other Language Changes"
+msgstr "Outras mudanças na Linguagem"
 
 #: ../../whatsnew/3.6.rst:740
 msgid "Some smaller changes made to the core Python language are:"
@@ -2789,7 +2789,7 @@ msgstr ""
 
 #: ../../whatsnew/3.6.rst:1923
 msgid "Deprecated"
-msgstr "Desusos"
+msgstr "Descontinuado"
 
 #: ../../whatsnew/3.6.rst:1926
 msgid "New Keywords"
