--- a/whatsnew/3.7.po
+++ b/whatsnew/3.7.po
@@ -58,7 +58,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.7.rst:66
 msgid "New library modules:"
-msgstr ""
+msgstr "Novo módulo de biblioteca:"
 
 #: ../Doc/whatsnew/3.7.rst:68
 msgid ""
@@ -75,7 +75,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.7.rst:72
 msgid "New built-in features:"
-msgstr ""
+msgstr "Novas funcionalidades built-in:"
 
 #: ../Doc/whatsnew/3.7.rst:74
 msgid ""
@@ -107,7 +107,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.7.rst:90
 msgid "Significant improvements in the standard library:"
-msgstr ""
+msgstr "Melhorias significativas na biblioteca padrão:"
 
 #: ../Doc/whatsnew/3.7.rst:92
 msgid ""
@@ -123,7 +123,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.7.rst:98
 msgid "CPython implementation improvements:"
-msgstr ""
+msgstr "Melhorias na implementação do CPython:"
 
 #: ../Doc/whatsnew/3.7.rst:100
 msgid "Avoiding the use of ASCII as a default text encoding:"
@@ -188,7 +188,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.7.rst:128
 msgid "New Features"
-msgstr ""
+msgstr "Novas Funcionalidades"
 
 #: ../Doc/whatsnew/3.7.rst:133
 msgid "PEP 563: Postponed Evaluation of Annotations"
@@ -694,7 +694,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.7.rst:494
 msgid "Other Language Changes"
-msgstr ""
+msgstr "Outras mudanças na Linguagem"
 
 #: ../Doc/whatsnew/3.7.rst:496
 msgid ""
@@ -763,7 +763,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.7.rst:539
 msgid "New Modules"
-msgstr ""
+msgstr "Novos Módulos"
 
 #: ../Doc/whatsnew/3.7.rst:544
 msgid "contextvars"
@@ -808,7 +808,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.7.rst:574
 msgid "Example::"
-msgstr ""
+msgstr "Exemplo::"
 
 #: ../Doc/whatsnew/3.7.rst:587
 msgid ":pep:`557` -- Data Classes"
@@ -845,7 +845,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.7.rst:613
 msgid "Improved Modules"
-msgstr ""
+msgstr "Módulos melhorados"
 
 #: ../Doc/whatsnew/3.7.rst:617
 msgid "argparse"
@@ -2494,7 +2494,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.7.rst:1763
 msgid "Optimizations"
-msgstr ""
+msgstr "Otimizações"
 
 #: ../Doc/whatsnew/3.7.rst:1765
 msgid ""
