--- a/whatsnew/3.8.po
+++ b/whatsnew/3.8.po
@@ -67,7 +67,7 @@ msgstr ""
 
 #: ../whatsnew/3.8.rst:87
 msgid "Other Language Changes"
-msgstr ""
+msgstr "Outras mudanças na Linguagem"
 
 #: ../whatsnew/3.8.rst:89
 msgid ""
@@ -113,7 +113,7 @@ msgstr ""
 
 #: ../whatsnew/3.8.rst:117
 msgid "New Modules"
-msgstr ""
+msgstr "Novos Módulos"
 
 #: ../whatsnew/3.8.rst:119
 msgid "None yet."
@@ -121,7 +121,7 @@ msgstr ""
 
 #: ../whatsnew/3.8.rst:123
 msgid "Improved Modules"
-msgstr ""
+msgstr "Módulos melhorados"
 
 #: ../whatsnew/3.8.rst:126
 msgid "asyncio"
@@ -236,7 +236,7 @@ msgstr ""
 
 #: ../whatsnew/3.8.rst:207
 msgid "Optimizations"
-msgstr ""
+msgstr "Otimizações"
 
 #: ../whatsnew/3.8.rst:209
 msgid ""
@@ -311,7 +311,7 @@ msgstr ""
 
 #: ../whatsnew/3.8.rst:262
 msgid "Deprecated"
-msgstr ""
+msgstr "Descontinuado"
 
 #: ../whatsnew/3.8.rst:264
 msgid ""
