--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -146,7 +146,7 @@ msgstr ""
 
 #: ../../whatsnew/3.1.rst:116
 msgid "Other Language Changes"
-msgstr "Other Language Changes"
+msgstr "Outras mudanças na Linguagem"
 
 #: ../../whatsnew/3.1.rst:118
 msgid "Some smaller changes made to the core Python language are:"
@@ -650,7 +650,7 @@ msgstr "(Contributed by Brett Cannon.)"
 
 #: ../../whatsnew/3.1.rst:416
 msgid "Optimizations"
-msgstr "Optimizations"
+msgstr "Otimizações"
 
 #: ../../whatsnew/3.1.rst:418
 msgid "Major performance enhancements have been added:"
