--- a/whatsnew/3.5.po
+++ b/whatsnew/3.5.po
@@ -88,7 +88,7 @@ msgstr ""
 
 #: ../../whatsnew/3.5.rst:74
 msgid "New built-in features:"
-msgstr "Novos recursos internos:"
+msgstr "Novas funcionalidades built-in:"
 
 #: ../../whatsnew/3.5.rst:76
 msgid ""
@@ -790,7 +790,7 @@ msgstr ""
 
 #: ../../whatsnew/3.5.rst:701
 msgid "Other Language Changes"
-msgstr "Other Language Changes"
+msgstr "Outras mudanças na Linguagem"
 
 #: ../../whatsnew/3.5.rst:703
 msgid "Some smaller changes made to the core Python language are:"
@@ -2907,7 +2907,7 @@ msgstr ""
 
 #: ../../whatsnew/3.5.rst:2262
 msgid "Deprecated"
-msgstr "Desusos"
+msgstr "Descontinuado"
 
 #: ../../whatsnew/3.5.rst:2265
 msgid "New Keywords"
