--- a/distutils/uploading.po
+++ b/distutils/uploading.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-01 10:14+0900\n"
+"POT-Creation-Date: 2019-05-24 11:30+0900\n"
 "PO-Revision-Date: 2017-02-16 17:41+0000\n"
 "Last-Translator: Claudio Rogerio Carvalho Filho, 2017\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
@@ -28,5 +28,6 @@ msgstr "Fazendo upload de pacotes para o índice de pacotes"
 
 #: ../../distutils/uploading.rst:7
 msgid ""
-"The contents of this page have moved to the section :ref:`package-index`."
-msgstr "O conteúdo desta página mudou para a seção :ref:`package-index`."
+"References to up to date PyPI documentation can be found at :ref:`publishing-"
+"python-packages`."
+msgstr ""
