--- a/extending/windows.po
+++ b/extending/windows.po
@@ -5,6 +5,7 @@
 #
 # Translators:
 # Raphael Mendonça, 2017
+# felipe caridade <caridade500@gmail.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -13,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-01-01 10:14+0900\n"
 "PO-Revision-Date: 2017-02-16 17:42+0000\n"
-"Last-Translator: Raphael Mendonça, 2017\n"
+"Last-Translator: felipe caridade <caridade500@gmail.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -43,6 +44,10 @@ msgid ""
 "still need the C compiler that was used to build Python; typically Microsoft "
 "Visual C++."
 msgstr ""
+"Os autores de módulos são encorajados a usar a abordagem distutils para "
+"construir módulos de extensão, em vez daquele descrito nesta seção. Você "
+"ainda precisará do compilador C que foi usado para construir o Python; "
+"normalmente o Microsoft Visual C ++."
 
 #: ../../extending/windows.rst:24
 msgid ""
@@ -56,7 +61,7 @@ msgstr ""
 
 #: ../../extending/windows.rst:34
 msgid "A Cookbook Approach"
-msgstr ""
+msgstr "Uma abordagem de livro de receitas"
 
 #: ../../extending/windows.rst:36
 msgid ""
@@ -72,7 +77,7 @@ msgstr ""
 
 #: ../../extending/windows.rst:48
 msgid "Differences Between Unix and Windows"
-msgstr ""
+msgstr "Diferenças entre o Unix e o Windows"
 
 #: ../../extending/windows.rst:53
 msgid ""
@@ -80,6 +85,10 @@ msgid ""
 "code.  Before you try to build a module that can be dynamically loaded, be "
 "aware of how your system works."
 msgstr ""
+"O Unix e o Windows usam paradigmas completamente diferentes para o "
+"carregamento do código em tempo de execução. Antes de tentar construir um "
+"módulo que possa ser carregado dinamicamente, esteja ciente de como o seu "
+"sistema funciona."
 
 #: ../../extending/windows.rst:57
 msgid ""
@@ -146,7 +155,7 @@ msgstr ""
 
 #: ../../extending/windows.rst:103
 msgid "Using DLLs in Practice"
-msgstr ""
+msgstr "Usando DLLs na prática"
 
 #: ../../extending/windows.rst:108
 msgid ""
