--- a/faq/library.po
+++ b/faq/library.po
@@ -5,6 +5,7 @@
 #
 # Translators:
 # Claudio Rogerio Carvalho Filho, 2018
+# Hildeberto Abreu Magalhães <hildeberto@gmail.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -13,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-01-01 10:14+0900\n"
 "PO-Revision-Date: 2017-02-16 17:43+0000\n"
-"Last-Translator: Claudio Rogerio Carvalho Filho, 2018\n"
+"Last-Translator: Hildeberto Abreu Magalhães <hildeberto@gmail.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -32,11 +33,11 @@ msgstr "Conteúdo"
 
 #: ../../faq/library.rst:12
 msgid "General Library Questions"
-msgstr ""
+msgstr "Questões gerais sobre bibliotecas"
 
 #: ../../faq/library.rst:15
 msgid "How do I find a module or application to perform task X?"
-msgstr ""
+msgstr "Como encontrar um módulo ou aplicação para realizar uma tarefa X?"
 
 #: ../../faq/library.rst:17
 msgid ""
@@ -44,6 +45,9 @@ msgid ""
 "relevant standard library module.  (Eventually you'll learn what's in the "
 "standard library and will be able to skip this step.)"
 msgstr ""
+"Verifique :ref:`a Referência de Bibliotecas <library-index>` para ver se há "
+"um módulo relevante da biblioteca padrão.  (Eventualmente, você aprenderá o "
+"que está na biblioteca padrão e poderá pular esta etapa.)"
 
 #: ../../faq/library.rst:21
 msgid ""
@@ -52,10 +56,14 @@ msgid ""
 "engine.  Searching for \"Python\" plus a keyword or two for your topic of "
 "interest will usually find something helpful."
 msgstr ""
+"Para pacotes de terceiros, pesquise no `Python Package Index <https://pypi."
+"org>`_ ou tente no  `Google <https://www.google.com>`_ ou outro buscador na "
+"Web. Pesquisando por \"Python\" mais uma ou duas palavras-chave do seu "
+"tópico de interesse geralmente encontrará algo útil."
 
 #: ../../faq/library.rst:28
 msgid "Where is the math.py (socket.py, regex.py, etc.) source file?"
-msgstr ""
+msgstr "Onde está o código fonte do math.py (socket.py, regex.py, etc.)?"
 
 #: ../../faq/library.rst:30
 msgid ""
