--- a/reference/executionmodel.po
+++ b/reference/executionmodel.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-01 10:14+0900\n"
+"POT-Creation-Date: 2019-05-14 11:26+0900\n"
 "PO-Revision-Date: 2017-02-16 23:38+0000\n"
 "Last-Translator: Leticia Portella <leportella@gmail.com>, 2017\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
@@ -273,7 +273,7 @@ msgstr ""
 msgid ""
 "When an exception is not handled at all, the interpreter terminates "
 "execution of the program, or returns to its interactive main loop.  In "
-"either case, it prints a stack backtrace, except when the exception is :exc:"
+"either case, it prints a stack traceback, except when the exception is :exc:"
 "`SystemExit`."
 msgstr ""
 
