--- a/reference/lexical_analysis.po
+++ b/reference/lexical_analysis.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-01 10:14+0900\n"
+"POT-Creation-Date: 2019-05-14 11:26+0900\n"
 "PO-Revision-Date: 2017-02-16 23:39+0000\n"
 "Last-Translator: Claudio Rogerio Carvalho Filho, 2017\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
@@ -106,7 +106,7 @@ msgid ""
 "A comment starts with a hash character (``#``) that is not part of a string "
 "literal, and ends at the end of the physical line.  A comment signifies the "
 "end of the logical line unless the implicit line joining rules are invoked. "
-"Comments are ignored by the syntax; they are not tokens."
+"Comments are ignored by the syntax."
 msgstr ""
 
 #: ../../reference/lexical_analysis.rst:79
