--- a/c-api/buffer.po
+++ b/c-api/buffer.po
@@ -7,6 +7,7 @@
 # (Douglas da Silva) <dementikovalev@yandex.ru>, 2017
 # Claudio Rogerio Carvalho Filho, 2017
 # Julio Gadioli Soares <jugaso@gmail.com>, 2018
+# felipe caridade <caridade500@gmail.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -15,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-01-01 10:14+0900\n"
 "PO-Revision-Date: 2017-02-16 17:33+0000\n"
-"Last-Translator: Julio Gadioli Soares <jugaso@gmail.com>, 2018\n"
+"Last-Translator: felipe caridade <caridade500@gmail.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -569,7 +570,7 @@ msgstr ""
 #: ../../c-api/buffer.rst:333 ../../c-api/buffer.rst:335
 #: ../../c-api/buffer.rst:337
 msgid "yes"
-msgstr ""
+msgstr "sim"
 
 #: ../../c-api/buffer.rst:274 ../../c-api/buffer.rst:323
 #: ../../c-api/buffer.rst:325
