--- a/c-api/bytes.po
+++ b/c-api/bytes.po
@@ -9,6 +9,7 @@
 # Guilherme Soster <guilhermesosters@gmail.com>, 2017
 # Julio Gadioli Soares <jugaso@gmail.com>, 2018
 # Tiago Henrique <tiagohrm@gmail.com>, 2018
+# Marco Rougeth <marco@rougeth.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -17,7 +18,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-01-01 10:14+0900\n"
 "PO-Revision-Date: 2017-02-16 17:33+0000\n"
-"Last-Translator: Tiago Henrique <tiagohrm@gmail.com>, 2018\n"
+"Last-Translator: Marco Rougeth <marco@rougeth.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
