--- a/c-api/memory.po
+++ b/c-api/memory.po
@@ -7,6 +7,7 @@
 # Raphael Mendonça, 2017
 # Welington Carlos <wcarlos3@gmail.com>, 2017
 # Claudio Rogerio Carvalho Filho, 2018
+# Marco Rougeth <marco@rougeth.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -15,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-04-12 11:10+0900\n"
 "PO-Revision-Date: 2017-02-16 17:37+0000\n"
-"Last-Translator: Claudio Rogerio Carvalho Filho, 2018\n"
+"Last-Translator: Marco Rougeth <marco@rougeth.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
