--- a/howto/curses.po
+++ b/howto/curses.po
@@ -7,6 +7,7 @@
 # Claudio Rogerio Carvalho Filho, 2017
 # Marciel Leal <marcielmanoel15@gmail.com>, 2018
 # Otávio Carneiro <otavio@carneiro.blog.br>, 2019
+# Marco Rougeth <marco@rougeth.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -15,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-01-01 10:14+0900\n"
 "PO-Revision-Date: 2017-02-16 17:44+0000\n"
-"Last-Translator: Otávio Carneiro <otavio@carneiro.blog.br>, 2019\n"
+"Last-Translator: Marco Rougeth <marco@rougeth.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
