--- a/license.po
+++ b/license.po
@@ -6,15 +6,16 @@
 # Translators:
 # Claudio Rogerio Carvalho Filho, 2017
 # Otávio Carneiro <otavio@carneiro.blog.br>, 2019
+# felipe caridade <caridade500@gmail.com>, 2019
 #
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-01 10:14+0900\n"
+"POT-Creation-Date: 2019-05-07 11:22+0900\n"
 "PO-Revision-Date: 2017-02-16 17:32+0000\n"
-"Last-Translator: Otávio Carneiro <otavio@carneiro.blog.br>, 2019\n"
+"Last-Translator: felipe caridade <caridade500@gmail.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -29,7 +30,7 @@ msgstr "História e Licença"
 
 #: ../../license.rst:11
 msgid "History of the software"
-msgstr ""
+msgstr "História do software"
 
 #: ../../license.rst:13
 msgid ""
@@ -38,6 +39,10 @@ msgid ""
 "successor of a language called ABC.  Guido remains Python's principal "
 "author, although it includes many contributions from others."
 msgstr ""
+"O Python foi criado no início dos anos 1990 por Guido van Rossum na "
+"Stichting Mathematisch Centrum (CWI, veja https://www.cwi.nl/) na Holanda "
+"como um sucessor de uma linguagem chamada ABC. Guido continua a ser o "
+"principal autor de Python, embora inclua muitas contribuições de outros."
 
 #: ../../license.rst:18
 msgid ""
@@ -45,6 +50,9 @@ msgid ""
 "Research Initiatives (CNRI, see https://www.cnri.reston.va.us/) in Reston, "
 "Virginia where he released several versions of the software."
 msgstr ""
+"Em 1995, Guido continuou seu trabalho em Python na Corporação para "
+"Iniciativas Nacionais de Pesquisa (CNRI, veja https://www.cnri.reston.va."
+"us/) em Reston, Virgínia, onde lançou várias versões do software."
 
 #: ../../license.rst:22
 msgid ""
@@ -56,6 +64,14 @@ msgid ""
 "specifically to own Python-related Intellectual Property.  Zope Corporation "
 "is a sponsoring member of the PSF."
 msgstr ""
+"Em maio de 2000, Guido e a equipe principal de desenvolvimento do Python "
+"mudaram-se para o BeOpen.com para formar a equipe BeOpen PythonLabs. Em "
+"outubro do mesmo ano, a equipe da PythonLabs mudou para a Digital Creations "
+"(agora Zope Corporation; veja http://www.zope.com/). Em 2001, formou-se a "
+"Python Software Foundation (PSF, ver https://www.python.org/psf/), uma "
+"organização sem fins lucrativos criada especificamente para possuir "
+"propriedade intelectual relacionada a Python. A Zope Corporation é um membro "
+"patrocinador do PSF."
 
 #: ../../license.rst:30
 msgid ""
@@ -64,6 +80,10 @@ msgid ""
 "have also been GPL-compatible; the table below summarizes the various "
 "releases."
 msgstr ""
+"Todas as versões do Python são de código aberto (consulte https://opensource."
+"org/ para a definição de código aberto). Historicamente, a maioria, mas não "
+"todas, versões do Python também são compatíveis com GPL; a tabela abaixo "
+"resume os vários lançamentos."
 
 #: ../../license.rst:35
 msgid "Release"
@@ -71,108 +91,108 @@ msgstr "Release"
 
 #: ../../license.rst:35
 msgid "Derived from"
-msgstr ""
+msgstr "Derivado de"
 
 #: ../../license.rst:35
 msgid "Year"
-msgstr ""
+msgstr "Ano"
 
 #: ../../license.rst:35
 msgid "Owner"
-msgstr ""
+msgstr "Proprietário"
 
 #: ../../license.rst:35
 msgid "GPL compatible?"
-msgstr ""
+msgstr "GPL compatível?"
 
 #: ../../license.rst:37
 msgid "0.9.0 thru 1.2"
-msgstr ""
+msgstr "0.9.0 a 1.2"
 
 #: ../../license.rst:37
 msgid "n/a"
-msgstr ""
+msgstr "n/a"
 
 #: ../../license.rst:37
 msgid "1991-1995"
-msgstr ""
+msgstr "1991-1995"
 
 #: ../../license.rst:37
 msgid "CWI"
-msgstr ""
+msgstr "CWI"
 
 #: ../../license.rst:37 ../../license.rst:39 ../../license.rst:49
 #: ../../license.rst:51 ../../license.rst:53 ../../license.rst:55
 #: ../../license.rst:57
 msgid "yes"
-msgstr ""
+msgstr "sim"
 
 #: ../../license.rst:39
 msgid "1.3 thru 1.5.2"
-msgstr ""
+msgstr "1.3 a 1.5.2"
 
 #: ../../license.rst:39
 msgid "1.2"
-msgstr ""
+msgstr "1.2"
 
 #: ../../license.rst:39
 msgid "1995-1999"
-msgstr ""
+msgstr "1995-1999"
 
 #: ../../license.rst:39 ../../license.rst:41 ../../license.rst:45
 msgid "CNRI"
-msgstr ""
+msgstr "CNRI"
 
 #: ../../license.rst:41 ../../license.rst:43 ../../license.rst:45
 msgid "1.6"
-msgstr ""
+msgstr "1.6"
 
 #: ../../license.rst:41
 msgid "1.5.2"
-msgstr ""
+msgstr "1.5.2"
 
 #: ../../license.rst:41 ../../license.rst:43
 msgid "2000"
-msgstr ""
+msgstr "2000"
 
 #: ../../license.rst:41 ../../license.rst:43 ../../license.rst:45
 #: ../../license.rst:47
 msgid "no"
-msgstr ""
+msgstr "não"
 
 #: ../../license.rst:43
 msgid "2.0"
-msgstr ""
+msgstr "2.0"
 
 #: ../../license.rst:43
 msgid "BeOpen.com"
-msgstr ""
+msgstr "BeOpen.com"
 
 #: ../../license.rst:45
 msgid "1.6.1"
-msgstr ""
+msgstr "1.6.1"
 
 #: ../../license.rst:45 ../../license.rst:47 ../../license.rst:49
 #: ../../license.rst:51
 msgid "2001"
-msgstr ""
+msgstr "2001"
 
 #: ../../license.rst:47
 msgid "2.1"
-msgstr ""
+msgstr "2.1"
 
 #: ../../license.rst:47 ../../license.rst:49
 msgid "2.0+1.6.1"
-msgstr ""
+msgstr "2.0+1.6.1"
 
 #: ../../license.rst:47 ../../license.rst:49 ../../license.rst:51
 #: ../../license.rst:53 ../../license.rst:55 ../../license.rst:57
 msgid "PSF"
-msgstr ""
+msgstr "PSF"
 
 #: ../../license.rst:49
 msgid "2.0.1"
-msgstr ""
+msgstr "2.0.1"
 
 #: ../../license.rst:51 ../../license.rst:53 ../../license.rst:57
 msgid "2.1.1"
@@ -180,27 +200,27 @@ msgstr "2.1.1"
 
 #: ../../license.rst:51
 msgid "2.1+2.0.1"
-msgstr ""
+msgstr "2.1+2.0.1"
 
 #: ../../license.rst:53 ../../license.rst:55
 msgid "2.1.2"
-msgstr ""
+msgstr "2.1.2"
 
 #: ../../license.rst:53 ../../license.rst:55
 msgid "2002"
-msgstr ""
+msgstr "2002"
 
 #: ../../license.rst:55
 msgid "2.1.3"
-msgstr ""
+msgstr "2.1.3"
 
 #: ../../license.rst:57
 msgid "2.2 and above"
-msgstr ""
+msgstr "2.2 e acima"
 
 #: ../../license.rst:57
 msgid "2001-now"
-msgstr ""
+msgstr "2001-agora"
 
 #: ../../license.rst:62
 msgid ""
@@ -210,16 +230,23 @@ msgid ""
 "possible to combine Python with other software that is released under the "
 "GPL; the others don't."
 msgstr ""
+"Compatível com GPL não significa que estamos distribuindo Python sob a GPL. "
+"Todas as licenças do Python, ao contrário da GPL, permitem distribuir uma "
+"versão modificada sem fazer alterações em código aberto. As licenças "
+"compatíveis com GPL possibilitam combinar o Python com outro software "
+"lançado sob a GPL; os outros não."
 
 #: ../../license.rst:68
 msgid ""
 "Thanks to the many outside volunteers who have worked under Guido's "
 "direction to make these releases possible."
 msgstr ""
+"Graças aos muitos voluntários externos que trabalharam sob a direção de "
+"Guido para tornar esses lançamentos possíveis."
 
 #: ../../license.rst:73
 msgid "Terms and conditions for accessing or otherwise using Python"
-msgstr ""
+msgstr "Termos e condições para acessar ou usar Python"
 
 #: ../../license.rst:77
 msgid "PSF LICENSE AGREEMENT FOR PYTHON |release|"
@@ -227,23 +254,23 @@ msgstr "PSF LICENSE AGREEMENT FOR PYTHON |release|"
 
 #: ../../license.rst:125
 msgid "BEOPEN.COM LICENSE AGREEMENT FOR PYTHON 2.0"
-msgstr ""
+msgstr "ACORDO DE LICENÇA DA BEOPEN.COM PARA PYTHON 2.0"
 
 #: ../../license.rst:127
 msgid "BEOPEN PYTHON OPEN SOURCE LICENSE AGREEMENT VERSION 1"
-msgstr ""
+msgstr "CONTRATO DE LICENÇA DE FONTE ABERTA DO BEOPEN PYTHON VERSÃO 1"
 
 #: ../../license.rst:172
 msgid "CNRI LICENSE AGREEMENT FOR PYTHON 1.6.1"
-msgstr ""
+msgstr "CONTRATO DE LICENÇA DA CNRI PARA O PYTHON 1.6.1"
 
 #: ../../license.rst:237
 msgid "CWI LICENSE AGREEMENT FOR PYTHON 0.9.0 THROUGH 1.2"
-msgstr ""
+msgstr "ACORDO DE LICENÇA DA CWI PARA PYTHON 0.9.0 A 1.2"
 
 #: ../../license.rst:262
 msgid "Licenses and Acknowledgements for Incorporated Software"
-msgstr ""
+msgstr "Licenças e Reconhecimentos para Software Incorporado"
 
 #: ../../license.rst:264
 msgid ""
@@ -251,10 +278,12 @@ msgid ""
 "acknowledgements for third-party software incorporated in the Python "
 "distribution."
 msgstr ""
+"Esta seção é uma lista incompleta, mas crescente, de licenças e confirmações "
+"para softwares de terceiros incorporados na distribuição do Python."
 
 #: ../../license.rst:269
 msgid "Mersenne Twister"
-msgstr ""
+msgstr "Mersenne Twister"
 
 #: ../../license.rst:271
 msgid ""
@@ -262,6 +291,9 @@ msgid ""
 "math.sci.hiroshima-u.ac.jp/~m-mat/MT/MT2002/emt19937ar.html. The following "
 "are the verbatim comments from the original code::"
 msgstr ""
+"O módulo: mod: `_random` inclui código baseado em um download de http://www."
+"math.sci.hiroshima-u.ac.jp/~m-mat/MT/MT2002/emt19937ar.html. A seguir estão "
+"os comentários literais do código original:"
 
 #: ../../license.rst:318
 msgid "Sockets"
@@ -273,76 +305,83 @@ msgid ""
 "`getnameinfo`, which are coded in separate source files from the WIDE "
 "Project, http://www.wide.ad.jp/. ::"
 msgstr ""
+"O módulo: mod: `socket` usa as funções: func:` getaddrinfo` e: func: "
+"`getnameinfo`, que são codificadas em arquivos de origem separados do "
+"Projeto WIDE, http://www.wide.ad.jp/. ::"
 
 #: ../../license.rst:353
 msgid "Asynchronous socket services"
-msgstr ""
+msgstr "Serviços de soquete assíncrono"
 
 #: ../../license.rst:355
 msgid ""
 "The :mod:`asynchat` and :mod:`asyncore` modules contain the following "
 "notice::"
 msgstr ""
+"Os módulos: mod: `asynchat` e: mod:` asyncore` contêm o seguinte aviso ::"
 
 #: ../../license.rst:380
 msgid "Cookie management"
-msgstr ""
+msgstr "Gerenciamento de cookies"
 
 #: ../../license.rst:382
 msgid "The :mod:`http.cookies` module contains the following notice::"
-msgstr ""
+msgstr "O módulo: mod: `http.cookies` contém o seguinte aviso ::"
 
 #: ../../license.rst:408
 msgid "Execution tracing"
-msgstr ""
+msgstr "Rastreamento de execução"
 
 #: ../../license.rst:410
 msgid "The :mod:`trace` module contains the following notice::"
-msgstr ""
+msgstr "O módulo: mod: `trace` contém o seguinte aviso ::"
 
 #: ../../license.rst:441
 msgid "UUencode and UUdecode functions"
-msgstr ""
+msgstr "Funções UUencode e UUdecode"
 
 #: ../../license.rst:443
 msgid "The :mod:`uu` module contains the following notice::"
-msgstr ""
+msgstr "O módulo: mod: `uu` contém o seguinte aviso ::"
 
 #: ../../license.rst:471
 msgid "XML Remote Procedure Calls"
-msgstr ""
+msgstr "Chamadas de Procedimento Remoto XML"
 
 #: ../../license.rst:473
 msgid "The :mod:`xmlrpc.client` module contains the following notice::"
-msgstr ""
+msgstr "O módulo: mod: `xmlrpc.client` contém o seguinte aviso ::"
 
 #: ../../license.rst:504
 msgid "test_epoll"
-msgstr ""
+msgstr "test_epoll"
 
 #: ../../license.rst:506
 msgid "The :mod:`test_epoll` module contains the following notice::"
-msgstr ""
+msgstr "O módulo: mod: `test_epoll` contém o seguinte aviso ::"
 
 #: ../../license.rst:530
 msgid "Select kqueue"
-msgstr ""
+msgstr "Selecione o kqueue"
 
 #: ../../license.rst:532
 msgid ""
 "The :mod:`select` module contains the following notice for the kqueue "
 "interface::"
 msgstr ""
+"O módulo: mod: `select` contém o seguinte aviso para a interface do kqueue ::"
 
 #: ../../license.rst:561
 msgid "SipHash24"
-msgstr ""
+msgstr "SipHash24"
 
 #: ../../license.rst:563
 msgid ""
 "The file :file:`Python/pyhash.c` contains Marek Majkowski' implementation of "
-"Dan Bernstein's SipHash24 algorithm. The contains the following note::"
+"Dan Bernstein's SipHash24 algorithm. It contains the following note::"
 msgstr ""
+"O arquivo: file: `Python / pyhash.c` contém a implementação de Marek "
+"Majkowski do algoritmo SipHash24 de Dan Bernstein. Contém a seguinte nota ::"
 
 #: ../../license.rst:590
 msgid "strtod and dtoa"
@@ -356,6 +395,11 @@ msgid ""
 "org/fp/.  The original file, as retrieved on March 16, 2009, contains the "
 "following copyright and licensing notice::"
 msgstr ""
+"O arquivo: file: `Python / dtoa.c`, que fornece as funções C dtoa e strtod "
+"para conversão de duplas de C para e de strings, é derivado do arquivo com o "
+"mesmo nome de David M. Gay, atualmente disponível em http://www.netlib.org/"
+"fp/. O arquivo original, conforme recuperado em 16 de março de 2009, contém "
+"os seguintes avisos de direitos autorais e de licenciamento ::"
 
 #: ../../license.rst:620
 msgid "OpenSSL"
@@ -369,6 +413,11 @@ msgid ""
 "include a copy of the OpenSSL libraries, so we include a copy of the OpenSSL "
 "license here::"
 msgstr ""
+"Os módulos: mod: `hashlib`,: mod:` posix`,: mod: `ssl`,: mod:` crypt` usam a "
+"biblioteca OpenSSL para desempenho adicional se forem disponibilizados pelo "
+"sistema operacional. Além disso, os instaladores do Windows e do Mac OS X "
+"para Python podem incluir uma cópia das bibliotecas do OpenSSL, portanto "
+"incluímos uma cópia da licença do OpenSSL aqui:"
 
 #: ../../license.rst:757
 msgid "expat"
@@ -379,6 +428,9 @@ msgid ""
 "The :mod:`pyexpat` extension is built using an included copy of the expat "
 "sources unless the build is configured ``--with-system-expat``::"
 msgstr ""
+"A extensão: mod: `pyexpat` é construída usando uma cópia incluída das fontes "
+"de expatriadas, a menos que a compilação esteja configurada ``--with-system-"
+"expat``::"
 
 #: ../../license.rst:786
 msgid "libffi"
@@ -389,6 +441,9 @@ msgid ""
 "The :mod:`_ctypes` extension is built using an included copy of the libffi "
 "sources unless the build is configured ``--with-system-libffi``::"
 msgstr ""
+"A extensão: mod: `_ctypes` é construída usando uma cópia incluída das fontes "
+"libffi, a menos que a compilação esteja configurada ``--with-system-"
+"libffi``::"
 
 #: ../../license.rst:815
 msgid "zlib"
@@ -400,23 +455,31 @@ msgid ""
 "sources if the zlib version found on the system is too old to be used for "
 "the build::"
 msgstr ""
+"A extensão: mod: `zlib` é construída usando uma cópia incluída das fontes "
+"zlib se a versão do zlib encontrada no sistema for muito antiga para ser "
+"usada na construção ::"
 
 #: ../../license.rst:846
 msgid "cfuhash"
-msgstr ""
+msgstr "cfuhash"
 
 #: ../../license.rst:848
 msgid ""
 "The implementation of the hash table used by the :mod:`tracemalloc` is based "
 "on the cfuhash project::"
 msgstr ""
+"A implementação da tabela de hash usada pelo: mod: `tracemalloc` é baseada "
+"no projeto cfuhash ::"
 
 #: ../../license.rst:887
 msgid "libmpdec"
-msgstr ""
+msgstr "libmpdec"
 
 #: ../../license.rst:889
 msgid ""
 "The :mod:`_decimal` module is built using an included copy of the libmpdec "
 "library unless the build is configured ``--with-system-libmpdec``::"
 msgstr ""
+"O módulo: mod: `_decimal` é construído usando uma cópia incluída da "
+"biblioteca libmpdec, a menos que a compilação esteja configurada ``--with-"
+"system-libmpdec``::"
