--- a/reference/datamodel.po
+++ b/reference/datamodel.po
@@ -7,8 +7,8 @@
 # Tiago Henrique <tiagohrm@gmail.com>, 2017
 # Raphael Mendonça, 2017
 # Welington Carlos <wcarlos3@gmail.com>, 2017
-# Marciel Leal <marcielmanoel15@gmail.com>, 2017
 # Claudio Rogerio Carvalho Filho, 2017
+# Marco Rougeth <marco@rougeth.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -17,7 +17,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-06 11:31+0900\n"
 "PO-Revision-Date: 2017-02-16 23:38+0000\n"
-"Last-Translator: Claudio Rogerio Carvalho Filho, 2017\n"
+"Last-Translator: Marco Rougeth <marco@rougeth.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
