--- a/reference/expressions.po
+++ b/reference/expressions.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-01 10:14+0900\n"
+"POT-Creation-Date: 2019-05-14 11:26+0900\n"
 "PO-Revision-Date: 2017-02-16 23:38+0000\n"
 "Last-Translator: Claudio Rogerio Carvalho Filho, 2017\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
@@ -168,8 +168,8 @@ msgstr ""
 #: ../../reference/expressions.rst:146
 msgid ""
 "An empty pair of parentheses yields an empty tuple object.  Since tuples are "
-"immutable, the rules for literals apply (i.e., two occurrences of the empty "
-"tuple may or may not yield the same object)."
+"immutable, the same rules as for literals apply (i.e., two occurrences of "
+"the empty tuple may or may not yield the same object)."
 msgstr ""
 
 #: ../../reference/expressions.rst:155
@@ -517,8 +517,8 @@ msgid ""
 "When the underlying iterator is complete, the :attr:`~StopIteration.value` "
 "attribute of the raised :exc:`StopIteration` instance becomes the value of "
 "the yield expression. It can be either set explicitly when raising :exc:"
-"`StopIteration`, or automatically when the sub-iterator is a generator (by "
-"returning a value from the sub-generator)."
+"`StopIteration`, or automatically when the subiterator is a generator (by "
+"returning a value from the subgenerator)."
 msgstr ""
 
 #: ../../reference/expressions.rst:490
@@ -558,7 +558,7 @@ msgstr ""
 #: ../../reference/expressions.rst:506
 msgid ""
 "The proposal to introduce the :token:`yield_from` syntax, making delegation "
-"to sub-generators easy."
+"to subgenerators easy."
 msgstr ""
 
 #: ../../reference/expressions.rst:510
@@ -660,7 +660,7 @@ msgstr ""
 #: ../../reference/expressions.rst:615
 msgid ""
 "The presence of a yield expression in a function or method defined using :"
-"keyword:`async def` further defines the function as a :term:`asynchronous "
+"keyword:`async def` further defines the function as an :term:`asynchronous "
 "generator` function."
 msgstr ""
 
@@ -738,13 +738,13 @@ msgstr ""
 msgid ""
 "Returns an awaitable which when run starts to execute the asynchronous "
 "generator or resumes it at the last executed yield expression.  When an "
-"asynchronous generator function is resumed with a :meth:`~agen.__anext__` "
+"asynchronous generator function is resumed with an :meth:`~agen.__anext__` "
 "method, the current yield expression always evaluates to :const:`None` in "
 "the returned awaitable, which when run will continue to the next yield "
 "expression. The value of the :token:`expression_list` of the yield "
 "expression is the value of the :exc:`StopIteration` exception raised by the "
 "completing coroutine.  If the asynchronous generator exits without yielding "
-"another value, the awaitable instead raises an :exc:`StopAsyncIteration` "
+"another value, the awaitable instead raises a :exc:`StopAsyncIteration` "
 "exception, signalling that the asynchronous iteration has completed."
 msgstr ""
 
@@ -774,7 +774,7 @@ msgid ""
 "where the asynchronous generator was paused, and returns the next value "
 "yielded by the generator function as the value of the raised :exc:"
 "`StopIteration` exception.  If the asynchronous generator exits without "
-"yielding another value, an :exc:`StopAsyncIteration` exception is raised by "
+"yielding another value, a :exc:`StopAsyncIteration` exception is raised by "
 "the awaitable. If the generator function does not catch the passed-in "
 "exception, or raises a different exception, then when the awaitable is run "
 "that exception propagates to the caller of the awaitable."
@@ -1681,8 +1681,8 @@ msgstr ""
 
 #: ../../reference/expressions.rst:1587
 msgid ""
-"The operator :keyword:`not in` is defined to have the inverse true value of :"
-"keyword:`in`."
+"The operator :keyword:`not in` is defined to have the inverse truth value "
+"of :keyword:`in`."
 msgstr ""
 
 #: ../../reference/expressions.rst:1600
@@ -1691,10 +1691,10 @@ msgstr ""
 
 #: ../../reference/expressions.rst:1602
 msgid ""
-"The operators :keyword:`is` and :keyword:`is not` test for object identity: "
-"``x is y`` is true if and only if *x* and *y* are the same object.  Object "
-"identity is determined using the :meth:`id` function.  ``x is not y`` yields "
-"the inverse truth value. [#]_"
+"The operators :keyword:`is` and :keyword:`is not` test for an object's "
+"identity: ``x is y`` is true if and only if *x* and *y* are the same "
+"object.  An Object's identity is determined using the :meth:`id` function.  "
+"``x is not y`` yields the inverse truth value. [#]_"
 msgstr ""
 
 #: ../../reference/expressions.rst:1614
