--- a/tutorial/whatnow.po
+++ b/tutorial/whatnow.po
@@ -6,6 +6,7 @@
 # Translators:
 # Raphael Mendonça, 2017
 # Otávio Carneiro <otavio@carneiro.blog.br>, 2017
+# Claudio Rogerio Carvalho Filho, 2019
 # Adorilson Bezerra <adorilson@gmail.com>, 2019
 #
 #, fuzzy
@@ -13,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-01 10:14+0900\n"
+"POT-Creation-Date: 2019-05-08 11:22+0900\n"
 "PO-Revision-Date: 2017-02-16 23:41+0000\n"
 "Last-Translator: Adorilson Bezerra <adorilson@gmail.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
@@ -111,14 +112,14 @@ msgstr "https://docs.python.org:  Acesso rápido à documentação Python."
 #: ../../tutorial/whatnow.rst:41
 msgid ""
 "https://pypi.org: The Python Package Index, previously also nicknamed the "
-"Cheese Shop, is an index of user-created Python modules that are available "
-"for download.  Once you begin releasing code, you can register it here so "
-"that others can find it."
+"Cheese Shop [#]_, is an index of user-created Python modules that are "
+"available for download.  Once you begin releasing code, you can register it "
+"here so that others can find it."
 msgstr ""
-"O Índice de Pacotes Python (Python Package Index), anteriormente apelidado "
-"de Cheese Shop, é um índice de módulos Python criados pelos usuários "
-"disponíveis para download. Uma vez que você começa a publicar código, pode "
-"registrá-los aqui para que outros possam encontrá-los."
+"https://pypi.org: O índice de pacotes Python (Python package index), "
+"anteriormente apelidado de Cheese Shop [#]_, é um índice de módulos Python "
+"criados pelos usuários. Uma vez que você começar a publicar código, pode "
+"registrar seus pacotes aqui para que outros possam encontrá-los."
 
 #: ../../tutorial/whatnow.rst:46
 msgid ""
@@ -186,3 +187,16 @@ msgstr ""
 "ref:`Frequently Asked Questions <faq-index>` , também chamada de FAQ). A FAQ "
 "responde muitas das perguntas que aparecem com frequência e pode já conter a "
 "solução para o seu problema."
+
+#: ../../tutorial/whatnow.rst:73
+msgid "Footnotes"
+msgstr "Notas de Rodapé"
+
+#: ../../tutorial/whatnow.rst:74
+msgid ""
+"\"Cheese Shop\" is a Monty Python's sketch: a customer enters a cheese shop, "
+"but whatever cheese he asks for, the clerk says it's missing."
+msgstr ""
+"\"Cheese Shop\" é o título de um quadro do grupo Monty Python: um freguês "
+"entra em uma loja especializada em queijos, mas qualquer queijo que ele "
+"pede, o balconista diz que está em falta."
