--- a/whatsnew/2.1.po
+++ b/whatsnew/2.1.po
@@ -10,6 +10,7 @@
 # Misael borges <misael@planosassessoria.com.br>, 2017
 # (Douglas da Silva) <dementikovalev@yandex.ru>, 2017
 # Claudio Rogerio Carvalho Filho, 2017
+# Marco Rougeth <marco@rougeth.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -18,7 +19,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-01-01 10:14+0900\n"
 "PO-Revision-Date: 2017-02-16 23:42+0000\n"
-"Last-Translator: Claudio Rogerio Carvalho Filho, 2017\n"
+"Last-Translator: Marco Rougeth <marco@rougeth.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
