--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -7,6 +7,7 @@
 # Victor Matheus Castro <victormatheuscastro@gmail.com>, 2017
 # Raphael Mendonça, 2018
 # Claudio Rogerio Carvalho Filho, 2018
+# Marco Rougeth <marco@rougeth.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -15,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-01-01 10:14+0900\n"
 "PO-Revision-Date: 2017-02-16 23:43+0000\n"
-"Last-Translator: Claudio Rogerio Carvalho Filho, 2018\n"
+"Last-Translator: Marco Rougeth <marco@rougeth.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
