--- a/whatsnew/3.5.po
+++ b/whatsnew/3.5.po
@@ -8,6 +8,7 @@
 # Italo Penaforte <italo.penaforte@gmail.com>, 2017
 # Victor Matheus Castro <victormatheuscastro@gmail.com>, 2017
 # Claudio Rogerio Carvalho Filho, 2017
+# Marco Rougeth <marco@rougeth.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -16,7 +17,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-01-01 10:14+0900\n"
 "PO-Revision-Date: 2017-02-16 23:44+0000\n"
-"Last-Translator: Claudio Rogerio Carvalho Filho, 2017\n"
+"Last-Translator: Marco Rougeth <marco@rougeth.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -88,7 +89,7 @@ msgstr ""
 
 #: ../../whatsnew/3.5.rst:74
 msgid "New built-in features:"
-msgstr "Novas funcionalidades built-in:"
+msgstr "Novos recursos internos:"
 
 #: ../../whatsnew/3.5.rst:76
 msgid ""
